1500416868 | 68 files | M bin/version.txt,  M content/panorama/localization/tenfoot_brazilian.txt,  M content/panorama/localization/tenfoot_bulgarian.txt,  M content/panorama/localization/tenfoot_czech.txt,  M content/panorama/localization/tenfoot_danish.txt,  M content/panorama/localization/tenfoot_dutch.txt,  M content/panorama/localization/tenfoot_english.txt,  M content/panorama/localization/tenfoot_finnish.txt,  M content/panorama/localization/tenfoot_french.txt,  M content/panorama/localization/tenfoot_german.txt,  M content/panorama/localization/tenfoot_greek.txt,  M content/panorama/localization/tenfoot_hungarian.txt,  M content/panorama/localization/tenfoot_italian.txt,  M content/panorama/localization/tenfoot_korean.txt,  M content/panorama/localization/tenfoot_koreana.txt,  M content/panorama/localization/tenfoot_polish.txt,  M content/panorama/localization/tenfoot_portuguese.txt,  M content/panorama/localization/tenfoot_spanish.txt,  M content/panorama/localization/tenfoot_thai.txt,  M content/panorama/localization/tenfo
https://steamdb.info/patchnotes/1970394/

--- a/content/panorama/localization/tenfoot_bulgarian.txt
+++ b/content/panorama/localization/tenfoot_bulgarian.txt
@@ -632,4 +632,16 @@
 "[english]QuitApp"	"QUIT APP"
 "Customization_Disclaimer"	"Ако „Подсилени SteamVR обкръжения“ е включено, използвайте менюто в приложението, за да персонализирате своето начално пространство."
 "[english]Customization_Disclaimer"	"If Enhanced SteamVR Environments is enabled, use the in-app menu to customize your home space."
+"VRSettingsKnucklesTitle"	"Knuckles"
+"[english]VRSettingsKnucklesTitle"	"Knuckles"
+"VRSettingsKnuckles_CapsenseMode"	"Режим за капацитивна сетивност"
+"[english]VRSettingsKnuckles_CapsenseMode"	"Cap Sense Mode"
+"KnucklesCapsenseMode_0"	"Пръстово проследяване (по подразбиране)"
+"[english]KnucklesCapsenseMode_0"	"Finger Tracking (Default)"
+"KnucklesCapsenseMode_1"	"Пръстово проследяване — Изкл."
+"[english]KnucklesCapsenseMode_1"	"Finger Tracking Disabled"
+"KnucklesCapsenseMode_2"	"Капацитивната сетивност контролира спусъка"
+"[english]KnucklesCapsenseMode_2"	"Cap Sense controls Trigger"
+"KnucklesCapsenseMode_3"	"Капацитивната сетивност контролира захвата"
+"[english]KnucklesCapsenseMode_3"	"Cap Sense controls Grip"
 }
