--- a/content/panorama/localization/tenfoot_czech.txt
+++ b/content/panorama/localization/tenfoot_czech.txt
@@ -633,4 +633,16 @@
 "[english]QuitApp"	"QUIT APP"
 "Customization_Disclaimer"	"Pokud používáte Vylepšená prostředí, upravte své domovské prostředí v nabídce aplikace."
 "[english]Customization_Disclaimer"	"If Enhanced SteamVR Environments is enabled, use the in-app menu to customize your home space."
+"VRSettingsKnucklesTitle"	"Knuckles"
+"[english]VRSettingsKnucklesTitle"	"Knuckles"
+"VRSettingsKnuckles_CapsenseMode"	"Režim Cap Sense"
+"[english]VRSettingsKnuckles_CapsenseMode"	"Cap Sense Mode"
+"KnucklesCapsenseMode_0"	"Sledování prstů (výchozí)"
+"[english]KnucklesCapsenseMode_0"	"Finger Tracking (Default)"
+"KnucklesCapsenseMode_1"	"Sledování prstů vypnuto"
+"[english]KnucklesCapsenseMode_1"	"Finger Tracking Disabled"
+"KnucklesCapsenseMode_2"	"Cap Sense pro spoušť"
+"[english]KnucklesCapsenseMode_2"	"Cap Sense controls Trigger"
+"KnucklesCapsenseMode_3"	"Cap Sense pro úchyt"
+"[english]KnucklesCapsenseMode_3"	"Cap Sense controls Grip"
 }
