--- a/content/panorama/localization/tenfoot_danish.txt
+++ b/content/panorama/localization/tenfoot_danish.txt
@@ -604,6 +604,10 @@
 "[english]VRSettingsMimeTypes_HomeApp"	"Home App: "
 "BackgroundImageSettings"	"Indstillinger"
 "[english]BackgroundImageSettings"	"Settings"
+"BackgroundImageReload_DomeProjection"	"Brug kuppel-projektering"
+"[english]BackgroundImageReload_DomeProjection"	"Use Dome Projection"
+"BackgroundImageReload_DomeRadius"	"Kuppel-radius"
+"[english]BackgroundImageReload_DomeRadius"	"Dome Radius"
 "BackgroundImageReload_CameraHeight"	"Kamerahøjde"
 "[english]BackgroundImageReload_CameraHeight"	"Camera Height"
 "NightModeCheck"	"Nattilstand"
@@ -620,4 +624,10 @@
 "[english]BackToApp"	"BACK TO APP"
 "QuitApp"	"AFSLUT APP"
 "[english]QuitApp"	"QUIT APP"
+"VRSettingsKnucklesTitle"	"Knuckles"
+"[english]VRSettingsKnucklesTitle"	"Knuckles"
+"KnucklesCapsenseMode_0"	"Fingersporing (standard)"
+"[english]KnucklesCapsenseMode_0"	"Finger Tracking (Default)"
+"KnucklesCapsenseMode_1"	"Fingersporing slået fra"
+"[english]KnucklesCapsenseMode_1"	"Finger Tracking Disabled"
 }
