--- a/content/panorama/localization/tenfoot_finnish.txt
+++ b/content/panorama/localization/tenfoot_finnish.txt
@@ -510,7 +510,7 @@
 "[english]VRSettingsBackground"	"Customize"
 "VRSettingsCamera"	"Kameran asetukset"
 "[english]VRSettingsCamera"	"Camera Settings"
-"VRSettings_CameraInDashboard"	"Ota kamera käyttöön kojelaudalla"
+"VRSettings_CameraInDashboard"	"Käynnistä kamera kojelaudalla"
 "[english]VRSettings_CameraInDashboard"	"Enable Camera in Dashboard"
 "VRSettings_CameraInChaperone"	"Käytä kameraa Chaperone-rajoihin"
 "[english]VRSettings_CameraInChaperone"	"Use Camera for Chaperone Bounds"
@@ -616,6 +616,32 @@
 "[english]NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
 "Transition_Progress_Description"	"ODOTETAAN..."
 "[english]Transition_Progress_Description"	"WAITING FOR..."
-"Now_Waiting"	"ODOTTAA"
+"Now_Waiting"	"ODOTTAA..."
 "[english]Now_Waiting"	"WAITING..."
+"HomeAppCheck"	"Parannellut SteamVR-ympäristöt"
+"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
+"HomeAppDesc"	"Uudet SteamVR-ympäristöt tukevat muokautettuvia kotiympäristöjä, yhteisöominaisuuksia ja paljon muuta. Osallistu testaukseen ja anna palautetta SteamVR-foorumeilla."
+"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
+"MutedLabel"	"Mykistetty"
+"[english]MutedLabel"	"Muted"
+"BackToApp"	"TAKAISIN SOVELLUKSEEN"
+"[english]BackToApp"	"BACK TO APP"
+"GoHome"	"KOTIIN"
+"[english]GoHome"	"GO HOME"
+"QuitApp"	"SULJE SOVELLUS"
+"[english]QuitApp"	"QUIT APP"
+"Customization_Disclaimer"	"Mikäli parannellut SteamVR-ympäristöt ovat käytössä, voit käyttää sovelluksen sisäistä valikkoa kotiympäristön muokkaamiseen."
+"[english]Customization_Disclaimer"	"If Enhanced SteamVR Environments is enabled, use the in-app menu to customize your home space."
+"VRSettingsKnucklesTitle"	"Knuckles"
+"[english]VRSettingsKnucklesTitle"	"Knuckles"
+"VRSettingsKnuckles_CapsenseMode"	"Kapasitiivinen sensoritila"
+"[english]VRSettingsKnuckles_CapsenseMode"	"Cap Sense Mode"
+"KnucklesCapsenseMode_0"	"Sormien tunnistus (oletus)"
+"[english]KnucklesCapsenseMode_0"	"Finger Tracking (Default)"
+"KnucklesCapsenseMode_1"	"Sormien tunnistus pois päältä"
+"[english]KnucklesCapsenseMode_1"	"Finger Tracking Disabled"
+"KnucklesCapsenseMode_2"	"Kapasitiivisen sensorin ohjausliipasin"
+"[english]KnucklesCapsenseMode_2"	"Cap Sense controls Trigger"
+"KnucklesCapsenseMode_3"	"Kapasitiivisen sensorin ohjausote"
+"[english]KnucklesCapsenseMode_3"	"Cap Sense controls Grip"
 }
