--- a/content/panorama/localization/tenfoot_italian.txt
+++ b/content/panorama/localization/tenfoot_italian.txt
@@ -630,4 +630,16 @@
 "[english]QuitApp"	"QUIT APP"
 "Customization_Disclaimer"	"Se gli ambienti migliorati di SteamVR sono attivi, utilizza il menu all'interno dell'applicazione per personalizzare il tuo spazio iniziale."
 "[english]Customization_Disclaimer"	"If Enhanced SteamVR Environments is enabled, use the in-app menu to customize your home space."
+"VRSettingsKnucklesTitle"	"Knuckles"
+"[english]VRSettingsKnucklesTitle"	"Knuckles"
+"VRSettingsKnuckles_CapsenseMode"	"Modalità Cap Sense"
+"[english]VRSettingsKnuckles_CapsenseMode"	"Cap Sense Mode"
+"KnucklesCapsenseMode_0"	"Tracciamento delle dita (predefinito)"
+"[english]KnucklesCapsenseMode_0"	"Finger Tracking (Default)"
+"KnucklesCapsenseMode_1"	"Tracciamento delle dita disabilitato"
+"[english]KnucklesCapsenseMode_1"	"Finger Tracking Disabled"
+"KnucklesCapsenseMode_2"	"Cap Sense controlla il grilletto"
+"[english]KnucklesCapsenseMode_2"	"Cap Sense controls Trigger"
+"KnucklesCapsenseMode_3"	"Cap Sense controlla l'impugnatura"
+"[english]KnucklesCapsenseMode_3"	"Cap Sense controls Grip"
 }
