--- a/content/panorama/localization/tenfoot_korean.txt
+++ b/content/panorama/localization/tenfoot_korean.txt
@@ -112,7 +112,7 @@
 "[english]UI_TextEntry_PasteClipboard"	"Paste"
 "UI_Agreements"	"동의사항"
 "[english]UI_Agreements"	"Agreements"
-"UI_ViewAgreements"	"SSA 및 개인 정보 보호 정책 보기"
+"UI_ViewAgreements"	"SSA 및 개인정보 보호정책 보기"
 "[english]UI_ViewAgreements"	"VIEW SSA & PRIVACY POLICY"
 "UI_I_Agree"	"동의"
 "[english]UI_I_Agree"	"I agree"
@@ -624,4 +624,10 @@
 "[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
 "MutedLabel"	"음성 차단됨"
 "[english]MutedLabel"	"Muted"
+"BackToApp"	"앱으로 돌아가기"
+"[english]BackToApp"	"BACK TO APP"
+"GoHome"	"홈으로 이동"
+"[english]GoHome"	"GO HOME"
+"QuitApp"	"앱 종료"
+"[english]QuitApp"	"QUIT APP"
 }
