--- a/content/panorama/localization/tenfoot_polish.txt
+++ b/content/panorama/localization/tenfoot_polish.txt
@@ -633,4 +633,16 @@
 "[english]QuitApp"	"QUIT APP"
 "Customization_Disclaimer"	"Użyj menu w aplikacji do dostosowania przestrzeni domowej, jeżeli rozszerzone środowiska SteamVR są włączone."
 "[english]Customization_Disclaimer"	"If Enhanced SteamVR Environments is enabled, use the in-app menu to customize your home space."
+"VRSettingsKnucklesTitle"	"Knuckles"
+"[english]VRSettingsKnucklesTitle"	"Knuckles"
+"VRSettingsKnuckles_CapsenseMode"	"Tryb Cap Sense"
+"[english]VRSettingsKnuckles_CapsenseMode"	"Cap Sense Mode"
+"KnucklesCapsenseMode_0"	"Śledzenie palców (domyślne)"
+"[english]KnucklesCapsenseMode_0"	"Finger Tracking (Default)"
+"KnucklesCapsenseMode_1"	"Śledzenie palców wyłączone"
+"[english]KnucklesCapsenseMode_1"	"Finger Tracking Disabled"
+"KnucklesCapsenseMode_2"	"Cap Sense kontroluje spust"
+"[english]KnucklesCapsenseMode_2"	"Cap Sense controls Trigger"
+"KnucklesCapsenseMode_3"	"Cap Sense kontroluje uchwyt"
+"[english]KnucklesCapsenseMode_3"	"Cap Sense controls Grip"
 }
