--- a/content/panorama/localization/tenfoot_portuguese.txt
+++ b/content/panorama/localization/tenfoot_portuguese.txt
@@ -633,4 +633,16 @@
 "[english]QuitApp"	"QUIT APP"
 "Customization_Disclaimer"	"Se os ambientes SteamVR melhorados estiverem ativados, usa o menu dentro da aplicação para personalizares o teu espaço inicial."
 "[english]Customization_Disclaimer"	"If Enhanced SteamVR Environments is enabled, use the in-app menu to customize your home space."
+"VRSettingsKnucklesTitle"	"Knuckles"
+"[english]VRSettingsKnucklesTitle"	"Knuckles"
+"VRSettingsKnuckles_CapsenseMode"	"Modo Cap Sense"
+"[english]VRSettingsKnuckles_CapsenseMode"	"Cap Sense Mode"
+"KnucklesCapsenseMode_0"	"Deteção dos dedos (Padrão)"
+"[english]KnucklesCapsenseMode_0"	"Finger Tracking (Default)"
+"KnucklesCapsenseMode_1"	"Deteção dos dedos desativada"
+"[english]KnucklesCapsenseMode_1"	"Finger Tracking Disabled"
+"KnucklesCapsenseMode_2"	"Cap Sense controla o gatilho"
+"[english]KnucklesCapsenseMode_2"	"Cap Sense controls Trigger"
+"KnucklesCapsenseMode_3"	"Cap Sense controla o punho"
+"[english]KnucklesCapsenseMode_3"	"Cap Sense controls Grip"
 }
