--- a/content/panorama/localization/tenfoot_spanish.txt
+++ b/content/panorama/localization/tenfoot_spanish.txt
@@ -502,7 +502,7 @@
 "[english]SelectBackgroundImage"	"Select a background image"
 "OpenImageFolderOnDesktop"	"Abrir carpeta en el escritorio"
 "[english]OpenImageFolderOnDesktop"	"Open Folder on Desktop"
-"VRSettingsGeneral"	"Configuración de RV"
+"VRSettingsGeneral"	"Ajustes de SteamRV"
 "[english]VRSettingsGeneral"	"SteamVR Settings"
 "VRSettingsChaperone"	"Configuración de Chaperone"
 "[english]VRSettingsChaperone"	"Chaperone Settings"
@@ -596,6 +596,8 @@
 "[english]SettingsTime_1h"	"after 1 hour of idle time"
 "Now_Playing_HomeApp"	"INICIO"
 "[english]Now_Playing_HomeApp"	"HOME"
+"Now_Starting_HomeApp"	"DE CAMINO A INICIO:"
+"[english]Now_Starting_HomeApp"	"GOING HOME TO"
 "VRSettingsMimeTypes_None"	"Ninguno"
 "[english]VRSettingsMimeTypes_None"	"None"
 "VRSettingsMimeTypes_HomeApp"	"Aplicación de inicio: "
@@ -614,8 +616,12 @@
 "[english]NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
 "Transition_Progress_Description"	"ESPERANDO POR..."
 "[english]Transition_Progress_Description"	"WAITING FOR..."
+"Now_Waiting"	"ESPERANDO..."
+"[english]Now_Waiting"	"WAITING..."
 "HomeAppCheck"	"Entornos de SteamVR mejorados"
 "[english]HomeAppCheck"	"Enhanced SteamVR Environments"
+"HomeAppDesc"	"Los nuevos entornos de SteamVR te traen espacios iniciales más ricos, características sociales y mucho más. Pruébalos y danos tu opinión en los foros de SteamVR."
+"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
 "MutedLabel"	"Silenciado"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"VOLVER A LA APLICACIÓN"
@@ -626,4 +632,6 @@
 "[english]QuitApp"	"QUIT APP"
 "Customization_Disclaimer"	"Si los entornos de SteamVR mejorados están activados, utiliza el menú que hay dentro de la aplicación para personalizar tu espacio inicial."
 "[english]Customization_Disclaimer"	"If Enhanced SteamVR Environments is enabled, use the in-app menu to customize your home space."
+"VRSettingsKnucklesTitle"	"Knuckles"
+"[english]VRSettingsKnucklesTitle"	"Knuckles"
 }
