--- a/content/panorama/localization/tenfoot_turkish.txt
+++ b/content/panorama/localization/tenfoot_turkish.txt
@@ -632,4 +632,16 @@
 "[english]QuitApp"	"QUIT APP"
 "Customization_Disclaimer"	"Gelişmiş SteamVR Ortamları etkinleştirilmişse, ev alanınızı özelleştirmek için uygulama içi menüyü kullanın."
 "[english]Customization_Disclaimer"	"If Enhanced SteamVR Environments is enabled, use the in-app menu to customize your home space."
+"VRSettingsKnucklesTitle"	"Knuckles"
+"[english]VRSettingsKnucklesTitle"	"Knuckles"
+"VRSettingsKnuckles_CapsenseMode"	"Kapasitif Algılama Modu"
+"[english]VRSettingsKnuckles_CapsenseMode"	"Cap Sense Mode"
+"KnucklesCapsenseMode_0"	"Parmak İzleme (Varsayılan)"
+"[english]KnucklesCapsenseMode_0"	"Finger Tracking (Default)"
+"KnucklesCapsenseMode_1"	"Parmak İzleme Devre Dışı"
+"[english]KnucklesCapsenseMode_1"	"Finger Tracking Disabled"
+"KnucklesCapsenseMode_2"	"Tetik - Kapasitif Algılama Modu"
+"[english]KnucklesCapsenseMode_2"	"Cap Sense controls Trigger"
+"KnucklesCapsenseMode_3"	"Kavrama - Kapasitif Algılama Modu"
+"[english]KnucklesCapsenseMode_3"	"Cap Sense controls Grip"
 }
