--- a/content/panorama/localization/tenfoot_ukrainian.txt
+++ b/content/panorama/localization/tenfoot_ukrainian.txt
@@ -632,4 +632,16 @@
 "[english]QuitApp"	"QUIT APP"
 "Customization_Disclaimer"	"Якщо ввімкнені розширені середовища SteamVR, тоді скористайтеся застосунковим меню для персоналізації свого домашнього простору."
 "[english]Customization_Disclaimer"	"If Enhanced SteamVR Environments is enabled, use the in-app menu to customize your home space."
+"VRSettingsKnucklesTitle"	"Knuckles"
+"[english]VRSettingsKnucklesTitle"	"Knuckles"
+"VRSettingsKnuckles_CapsenseMode"	"Режим ємнісного зондування"
+"[english]VRSettingsKnuckles_CapsenseMode"	"Cap Sense Mode"
+"KnucklesCapsenseMode_0"	"Відстеження пальців (стандартно)"
+"[english]KnucklesCapsenseMode_0"	"Finger Tracking (Default)"
+"KnucklesCapsenseMode_1"	"Відстеження пальців вимкнено"
+"[english]KnucklesCapsenseMode_1"	"Finger Tracking Disabled"
+"KnucklesCapsenseMode_2"	"Ємнісне зондування ‒ триґер"
+"[english]KnucklesCapsenseMode_2"	"Cap Sense controls Trigger"
+"KnucklesCapsenseMode_3"	"Ємнісне зондування ‒ хват"
+"[english]KnucklesCapsenseMode_3"	"Cap Sense controls Grip"
 }
