--- a/content/vrmonitor/translations/vrmonitor_errors_brazilian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_brazilian.txt
@@ -1,4 +1,4 @@
-﻿"lang"
+"lang"
 {
 "Language"	"brazilian"
 "Tokens"
@@ -451,7 +451,7 @@
 "[english]Lighthouse_BasestationFactoryError_Header"	"Base station unusable"
 "Lighthouse_BasestationFactoryError_Description"	"Esta estação base possui um defeito de fabricação. Por favor, entre em contato com a HTC para substituição."
 "[english]Lighthouse_BasestationFactoryError_Description"	"This base station has a manufacturing error, please contact HTC for a replacement base station."
-"Lighthouse_BasestationFactoryError_Action"	"Acessar htcvr.com/support"
+"Lighthouse_BasestationFactoryError_Action"	"Acessar htcvive.com/support"
 "[english]Lighthouse_BasestationFactoryError_Action"	"Visit htcvive.com/support"
 "Lighthouse_Disambiguator_TooManyBasestations_Header"	"Muitas estações base"
 "[english]Lighthouse_Disambiguator_TooManyBasestations_Header"	"Too many base stations"
@@ -841,5 +841,29 @@
 "[english]VRInitError_Compositor_UnableToCreateDevice_Description"	"The compositor was unable to create a graphics device as part of its initialization."
 "VRInitError_Compositor_UnableToCreateDevice_Action"	"Solução de problemas"
 "[english]VRInitError_Compositor_UnableToCreateDevice_Action"	"Troubleshooting"
+"Lighthouse_BasestationInternalFault_06_Header"	"Estação base inutilizável"
+"[english]Lighthouse_BasestationInternalFault_06_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_06_Description"	"Uma estação base desenvolveu um problema interno (falha 06). Por favor, reinicie a estação base com a luz vermelha piscante. Caso o problema persista, entre em contato com o fabricante para assistência."
+"[english]Lighthouse_BasestationInternalFault_06_Description"	"A base station has developed an internal problem (fault 06). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
+"Lighthouse_BasestationInternalFault_06_Action"	"Acessar htcvive.com/support"
+"[english]Lighthouse_BasestationInternalFault_06_Action"	"Visit htcvive.com/support"
+"Lighthouse_BasestationInternalFault_07_Header"	"Estação base inutilizável"
+"[english]Lighthouse_BasestationInternalFault_07_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_07_Description"	"Uma estação base desenvolveu um problema interno (falha 07). Por favor, reinicie a estação base com a luz vermelha piscante. Caso o problema persista, entre em contato com o fabricante para assistência."
+"[english]Lighthouse_BasestationInternalFault_07_Description"	"A base station has developed an internal problem (fault 07). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
+"Lighthouse_BasestationInternalFault_07_Action"	"Acessar htcvive.com/support"
+"[english]Lighthouse_BasestationInternalFault_07_Action"	"Visit htcvive.com/support"
+"Warning_DismissableWarning_NeedKnucklesDriver_Header"	"Driver do Knuckles disponível"
+"[english]Warning_DismissableWarning_NeedKnucklesDriver_Header"	"Knuckles Driver Available"
+"Warning_DismissableWarning_NeedKnucklesDriver_Description"	"Você está usando os controles Knuckles, mas não tem o driver do Knuckles instalado."
+"[english]Warning_DismissableWarning_NeedKnucklesDriver_Description"	"You are using Knuckes controllers, but don't have the Knuckles driver installed."
+"Warning_DismissableWarning_NeedKnucklesDriver_Action"	"Instalar driver"
+"[english]Warning_DismissableWarning_NeedKnucklesDriver_Action"	"Install Driver"
+"Warning_DismissableWarning_NewDriverInstalled_Header"	"Novo driver instalado"
+"[english]Warning_DismissableWarning_NewDriverInstalled_Header"	"New Driver Installed"
+"Warning_DismissableWarning_NewDriverInstalled_Description"	"Reinicie o SteamVR para usar o novo driver."
+"[english]Warning_DismissableWarning_NewDriverInstalled_Description"	"To use your new driver you will need to restart SteamVR."
+"Warning_DismissableWarning_NewDriverInstalled_Action"	"Reiniciar"
+"[english]Warning_DismissableWarning_NewDriverInstalled_Action"	"Restart"
 }
 }
