--- a/content/vrmonitor/translations/vrmonitor_errors_finnish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_finnish.txt
@@ -65,7 +65,7 @@
 "[english]Error_TrackingDevice_NoPose_Action"	"Troubleshooting"
 "VRInitError_Unknown_Header"	"Hmm, näin ei pitänyt käydä."
 "[english]VRInitError_Unknown_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Unknown_Description"	"Tapahtui odottamaton virhe. Lähetä järjestelmäraportti osoitteeseen steamvr@valvesoftware.com."
+"VRInitError_Unknown_Description"	"Tapahtui odottamaton virhe. Etsi apua SteamVR-tuesta."
 "[english]VRInitError_Unknown_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
 "VRInitError_Unknown_Action"	"Tarkista SteamVR-tuki"
 "[english]VRInitError_Unknown_Action"	"Check SteamVR Support"
@@ -107,7 +107,7 @@
 "[english]VRInitError_Init_InterfaceNotFound_Action"	""
 "VRInitError_Init_InvalidInterface_Header"	"Hmm, näin ei pitänyt käydä."
 "[english]VRInitError_Init_InvalidInterface_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_InvalidInterface_Description"	"Tapahtui odottamaton virhe. Lähetä järjestelmäraportti osoitteeseen steamvr@valvesoftware.com."
+"VRInitError_Init_InvalidInterface_Description"	"Tapahtui odottamaton virhe. Etsi apua SteamVR-tuesta."
 "[english]VRInitError_Init_InvalidInterface_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
 "VRInitError_Init_InvalidInterface_Action"	"Tarkista SteamVR-tuki"
 "[english]VRInitError_Init_InvalidInterface_Action"	"Check SteamVR Support"
@@ -125,7 +125,7 @@
 "[english]VRInitError_Init_HmdNotFound_Action"	"Troubleshooting"
 "VRInitError_Init_NotInitialized_Header"	"Hmm, näin ei pitänyt käydä."
 "[english]VRInitError_Init_NotInitialized_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_NotInitialized_Description"	"Tapahtui odottamaton virhe. Lähetä järjestelmäraportti osoitteeseen steamvr@valvesoftware.com."
+"VRInitError_Init_NotInitialized_Description"	"Tapahtui odottamaton virhe. Katso SteamVR-tuesta apua."
 "[english]VRInitError_Init_NotInitialized_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
 "VRInitError_Init_NotInitialized_Action"	"Tarkista SteamVR-tuki"
 "[english]VRInitError_Init_NotInitialized_Action"	"Check SteamVR Support"
@@ -155,55 +155,55 @@
 "[english]VRInitError_Init_PathRegistryNotWritable_Action"	"Troubleshooting"
 "VRInitError_Init_AppInfoInitFailed_Header"	"Jokin on vialla"
 "[english]VRInitError_Init_AppInfoInitFailed_Header"	"Something is wrong"
-"VRInitError_Init_AppInfoInitFailed_Description"	"SteamVR:n sisäinen osa ei toimi oikein. Luo järjestelmäraportti ja lähetä se osoitteeseen steamvr@valvesoftware.com."
+"VRInitError_Init_AppInfoInitFailed_Description"	"SteamVR:n sisäinen osa ei toimi oikein. Etsi apua SteamVR-tuesta."
 "[english]VRInitError_Init_AppInfoInitFailed_Description"	"An internal component of SteamVR isn't working properly. Please check SteamVR Support for help."
 "VRInitError_Init_AppInfoInitFailed_Action"	"Tarkista SteamVR-tuki"
 "[english]VRInitError_Init_AppInfoInitFailed_Action"	"Check SteamVR Support"
 "VRInitError_Init_Retry_Header"	"Hmm, näin ei pitänyt käydä."
 "[english]VRInitError_Init_Retry_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_Retry_Description"	"Tapahtui odottamaton virhe. Lähetä järjestelmäraportti osoitteeseen steamvr@valvesoftware.com."
+"VRInitError_Init_Retry_Description"	"Tapahtui odottamaton virhe. Etsi apua SteamVR-tuesta."
 "[english]VRInitError_Init_Retry_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
 "VRInitError_Init_Retry_Action"	"Tarkista SteamVR-tuki"
 "[english]VRInitError_Init_Retry_Action"	"Check SteamVR Support"
 "VRInitError_Init_InitCanceledByUser_Header"	"Hmm, näin ei pitänyt käydä."
 "[english]VRInitError_Init_InitCanceledByUser_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_InitCanceledByUser_Description"	"Tapahtui odottamaton virhe. Lähetä järjestelmäraportti osoitteeseen steamvr@valvesoftware.com."
+"VRInitError_Init_InitCanceledByUser_Description"	"Tapahtui odottamaton virhe. Etsi apua SteamVR-tuesta."
 "[english]VRInitError_Init_InitCanceledByUser_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
 "VRInitError_Init_InitCanceledByUser_Action"	"Tarkista SteamVR-tuki"
 "[english]VRInitError_Init_InitCanceledByUser_Action"	"Check SteamVR Support"
 "VRInitError_Init_AnotherAppLaunching_Header"	"Hmm, näin ei pitänyt käydä."
 "[english]VRInitError_Init_AnotherAppLaunching_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_AnotherAppLaunching_Description"	"Tapahtui odottamaton virhe. Lähetä järjestelmäraportti osoitteeseen steamvr@valvesoftware.com."
+"VRInitError_Init_AnotherAppLaunching_Description"	"Tapahtui odottamaton virhe. Etsi apua SteamVR-tuesta."
 "[english]VRInitError_Init_AnotherAppLaunching_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
 "VRInitError_Init_AnotherAppLaunching_Action"	"Tarkista SteamVR-tuki"
 "[english]VRInitError_Init_AnotherAppLaunching_Action"	"Check SteamVR Support"
 "VRInitError_Init_SettingsInitFailed_Header"	"Hmm, näin ei pitänyt käydä."
 "[english]VRInitError_Init_SettingsInitFailed_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_SettingsInitFailed_Description"	"Tapahtui odottamaton virhe. Lähetä järjestelmäraportti osoitteeseen steamvr@valvesoftware.com."
+"VRInitError_Init_SettingsInitFailed_Description"	"Tapahtui odottamaton virhe. Etsi apua SteamVR-tuesta."
 "[english]VRInitError_Init_SettingsInitFailed_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
 "VRInitError_Init_SettingsInitFailed_Action"	"Tarkista SteamVR-tuki"
 "[english]VRInitError_Init_SettingsInitFailed_Action"	"Check SteamVR Support"
 "VRInitError_Init_ShuttingDown_Header"	"Hmm, näin ei pitänyt käydä."
 "[english]VRInitError_Init_ShuttingDown_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_ShuttingDown_Description"	"Tapahtui odottamaton virhe. Lähetä järjestelmäraportti osoitteeseen steamvr@valvesoftware.com."
+"VRInitError_Init_ShuttingDown_Description"	"Tapahtui odottamaton virhe. Etsi apua SteamVR-tuesta."
 "[english]VRInitError_Init_ShuttingDown_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
 "VRInitError_Init_ShuttingDown_Action"	"Tarkista SteamVR-tuki"
 "[english]VRInitError_Init_ShuttingDown_Action"	"Check SteamVR Support"
 "VRInitError_Init_TooManyObjects_Header"	"Hmm, näin ei pitänyt käydä."
 "[english]VRInitError_Init_TooManyObjects_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_TooManyObjects_Description"	"Tapahtui odottamaton virhe. Lähetä järjestelmäraportti osoitteeseen steamvr@valvesoftware.com."
+"VRInitError_Init_TooManyObjects_Description"	"Tapahtui odottamaton virhe. Etsi apua SteamVR-tuesta."
 "[english]VRInitError_Init_TooManyObjects_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
 "VRInitError_Init_TooManyObjects_Action"	"Tarkista SteamVR-tuki"
 "[english]VRInitError_Init_TooManyObjects_Action"	"Check SteamVR Support"
 "VRInitError_Init_NoServerForBackgroundApp_Header"	"Hmm, näin ei pitänyt käydä."
 "[english]VRInitError_Init_NoServerForBackgroundApp_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_NoServerForBackgroundApp_Description"	"Tapahtui odottamaton virhe. Lähetä järjestelmäraportti osoitteeseen steamvr@valvesoftware.com."
+"VRInitError_Init_NoServerForBackgroundApp_Description"	"Tapahtui odottamaton virhe. Etsi apua SteamVR-tuesta."
 "[english]VRInitError_Init_NoServerForBackgroundApp_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
 "VRInitError_Init_NoServerForBackgroundApp_Action"	"Tarkista SteamVR-tuki"
 "[english]VRInitError_Init_NoServerForBackgroundApp_Action"	"Check SteamVR Support"
 "VRInitError_Init_NotSupportedWithCompositor_Header"	"Hmm, näin ei pitänyt käydä."
 "[english]VRInitError_Init_NotSupportedWithCompositor_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_NotSupportedWithCompositor_Description"	"Tapahtui odottamaton virhe. Lähetä järjestelmäraportti osoitteeseen steamvr@valvesoftware.com."
+"VRInitError_Init_NotSupportedWithCompositor_Description"	"Tapahtui odottamaton virhe. Etsi apua SteamVR-tuesta."
 "[english]VRInitError_Init_NotSupportedWithCompositor_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
 "VRInitError_Init_NotSupportedWithCompositor_Action"	"Tarkista SteamVR-tuki"
 "[english]VRInitError_Init_NotSupportedWithCompositor_Action"	"Check SteamVR Support"
@@ -293,7 +293,7 @@
 "[english]VRInitError_IPC_MutexInitFailed_Action"	"Troubleshooting"
 "VRInitError_IPC_Failed_Header"	"Hmm, näin ei pitänyt käydä."
 "[english]VRInitError_IPC_Failed_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_IPC_Failed_Description"	"Tapahtui odottamaton virhe. Lähetä järjestelmäraportti osoitteeseen steamvr@valvesoftware.com."
+"VRInitError_IPC_Failed_Description"	"Tapahtui odottamaton virhe. Etsi apua SteamVR-tuesta."
 "[english]VRInitError_IPC_Failed_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
 "VRInitError_IPC_Failed_Action"	"Tarkista SteamVR-tuki"
 "[english]VRInitError_IPC_Failed_Action"	"Check SteamVR Support"
@@ -443,7 +443,7 @@
 "[english]ChaperoneCalibrationState_Error_CollisionBoundsInvalid_Action"	"Run Room Setup"
 "Lighthouse_UnknownEvent_Header"	"Majakkavirhe"
 "[english]Lighthouse_UnknownEvent_Header"	"Lighthouse error"
-"Lighthouse_UnknownEvent_Description"	"Majakkajärjestelmän kanssa on ongelma. Lähetä järjestelmäraportti osoitteeseen steamvr@valvesoftware.com."
+"Lighthouse_UnknownEvent_Description"	"Majakkajärjestelmän kanssa on ongelma. Etsi apua SteamVR-tuesta."
 "[english]Lighthouse_UnknownEvent_Description"	"Something is wrong with your Lighthouse system. Please check SteamVR Support for help."
 "Lighthouse_UnknownEvent_Action"	"Tarkista SteamVR-tuki"
 "[english]Lighthouse_UnknownEvent_Action"	"Check SteamVR Support"
@@ -587,7 +587,7 @@
 "[english]Warning_DismissableWarning_BasestationSingleBaseModeHint_Description"	"If you are only using one base station, tracking quality will improve if you switch this basestation to mode A."
 "VRInitError_Init_NotAvailableToUtilityApps_Header"	"Hmm, näin ei pitänyt käydä."
 "[english]VRInitError_Init_NotAvailableToUtilityApps_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Init_NotAvailableToUtilityApps_Description"	"Tapahtui odottamaton virhe. Lähetä järjestelmäraportti osoitteeseen steamvr@valvesoftware.com."
+"VRInitError_Init_NotAvailableToUtilityApps_Description"	"Tapahtui odottamaton virhe. Etsi apua SteamVR-tuesta."
 "[english]VRInitError_Init_NotAvailableToUtilityApps_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
 "VRInitError_Init_NotAvailableToUtilityApps_Action"	"Tarkista SteamVR-tuki"
 "[english]VRInitError_Init_NotAvailableToUtilityApps_Action"	"Check SteamVR Support"
@@ -667,7 +667,7 @@
 "[english]Popover_BaseStationNoPowerManagement_Description"	"This base station can not participate in the power management."
 "VRInitError_Internal_Header"	"Hmm, näin ei pitänyt käydä."
 "[english]VRInitError_Internal_Header"	"Hmm, that shouldn't have happened."
-"VRInitError_Internal_Description"	"Tapahtui odottamaton virhe. Lähetä järjestelmäraportti osoitteeseen steamvr@valvesoftware.com."
+"VRInitError_Internal_Description"	"Tapahtui odottamaton virhe. Etsi apua SteamVR-tuesta."
 "[english]VRInitError_Internal_Description"	"There was an unexpected problem. Please check SteamVR Support for help."
 "VRInitError_Internal_Action"	"Tarkista SteamVR-tuki"
 "[english]VRInitError_Internal_Action"	"Check SteamVR Support"
@@ -831,5 +831,39 @@
 "[english]VRInitError_Compositor_FirmwareRequiresUpdate_Description"	"Your headset is detected, but requires a mandatory firmware update to ensure correct operation."
 "VRInitError_Compositor_FirmwareRequiresUpdate_Action"	"Päivitä ohjelmisto"
 "[english]VRInitError_Compositor_FirmwareRequiresUpdate_Action"	"Update Firmware"
+"Popover_LowBattery_HMD_Header"	"Virtuaalitodellisuuslaite on valmis alhaisella akun varauksella"
+"[english]Popover_LowBattery_HMD_Header"	"HMD ready with low battery"
+"Popover_LowBattery_HMD_Description"	"Tämä virtuaalitodellisuuslaite on yhteydessä ja jäljittää, mutta sen akun varaus on alhainen."
+"[english]Popover_LowBattery_HMD_Description"	"This HMD is connected and tracking but the battery is low."
+"VRInitError_Compositor_UnableToCreateDevice_Header"	"Latoja ei voi luoda laitetta"
+"[english]VRInitError_Compositor_UnableToCreateDevice_Header"	"Compositor Unable to Create Device"
+"VRInitError_Compositor_UnableToCreateDevice_Description"	"Latoja ei pystynyt luomaan näyttölaitetta osana sen alustamista."
+"[english]VRInitError_Compositor_UnableToCreateDevice_Description"	"The compositor was unable to create a graphics device as part of its initialization."
+"VRInitError_Compositor_UnableToCreateDevice_Action"	"Vianmääritys"
+"[english]VRInitError_Compositor_UnableToCreateDevice_Action"	"Troubleshooting"
+"Lighthouse_BasestationInternalFault_06_Header"	"Tukiasema ei käytettävissä"
+"[english]Lighthouse_BasestationInternalFault_06_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_06_Description"	"Tukiasema on havainnut sisäinen virheen (virhe 06). Sammuta ja käynnistä uudelleen tukiasema, jossa vilkkuu punainen valo. Mikäli ongelma jatkuu, ota yhteys valmistajaan."
+"[english]Lighthouse_BasestationInternalFault_06_Description"	"A base station has developed an internal problem (fault 06). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
+"Lighthouse_BasestationInternalFault_06_Action"	"Käy osoitteessa htcvive.com/support"
+"[english]Lighthouse_BasestationInternalFault_06_Action"	"Visit htcvive.com/support"
+"Lighthouse_BasestationInternalFault_07_Header"	"Tukiasema on epävakaa"
+"[english]Lighthouse_BasestationInternalFault_07_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_07_Description"	"Tukiasema on havainnut sisäinen virheen (virhe 07). Sammuta ja käynnistä uudelleen tukiasema, jossa vilkkuu punainen valo. Mikäli ongelma jatkuu, ota yhteys valmistajaan."
+"[english]Lighthouse_BasestationInternalFault_07_Description"	"A base station has developed an internal problem (fault 07). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
+"Lighthouse_BasestationInternalFault_07_Action"	"Käy osoitteessa htcvive.com/support"
+"[english]Lighthouse_BasestationInternalFault_07_Action"	"Visit htcvive.com/support"
+"Warning_DismissableWarning_NeedKnucklesDriver_Header"	"Knuckles-ajuri saatavilla"
+"[english]Warning_DismissableWarning_NeedKnucklesDriver_Header"	"Knuckles Driver Available"
+"Warning_DismissableWarning_NeedKnucklesDriver_Description"	"Käytät Knuckles-ohjaimia, mutta sinulta puutuu Knuckles-ajurin asennus."
+"[english]Warning_DismissableWarning_NeedKnucklesDriver_Description"	"You are using Knuckes controllers, but don't have the Knuckles driver installed."
+"Warning_DismissableWarning_NeedKnucklesDriver_Action"	"Asenna ajuri"
+"[english]Warning_DismissableWarning_NeedKnucklesDriver_Action"	"Install Driver"
+"Warning_DismissableWarning_NewDriverInstalled_Header"	"Uusi ajuri asennettu"
+"[english]Warning_DismissableWarning_NewDriverInstalled_Header"	"New Driver Installed"
+"Warning_DismissableWarning_NewDriverInstalled_Description"	"Käynnistä SteamVR uudelleen käyttääksesi uutta ajuriasi."
+"[english]Warning_DismissableWarning_NewDriverInstalled_Description"	"To use your new driver you will need to restart SteamVR."
+"Warning_DismissableWarning_NewDriverInstalled_Action"	"Käynnistä uudelleen"
+"[english]Warning_DismissableWarning_NewDriverInstalled_Action"	"Restart"
 }
 }
