--- a/content/vrmonitor/translations/vrmonitor_errors_french.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_french.txt
@@ -835,11 +835,35 @@
 "[english]Popover_LowBattery_HMD_Header"	"HMD ready with low battery"
 "Popover_LowBattery_HMD_Description"	"Ce casque est connecté et sa position détectée, mais sa batterie est faible."
 "[english]Popover_LowBattery_HMD_Description"	"This HMD is connected and tracking but the battery is low."
-"VRInitError_Compositor_UnableToCreateDevice_Header"	"Le Compositor n'est pas en mesure de créer un périphérique."
+"VRInitError_Compositor_UnableToCreateDevice_Header"	"Compositor n'est pas en mesure de créer un périphérique."
 "[english]VRInitError_Compositor_UnableToCreateDevice_Header"	"Compositor Unable to Create Device"
-"VRInitError_Compositor_UnableToCreateDevice_Description"	"Le compositeur n'a pas pu créer de périphérique graphique lors de son initialisation."
+"VRInitError_Compositor_UnableToCreateDevice_Description"	"Compositor n'a pas pu créer de périphérique graphique lors de son initialisation."
 "[english]VRInitError_Compositor_UnableToCreateDevice_Description"	"The compositor was unable to create a graphics device as part of its initialization."
 "VRInitError_Compositor_UnableToCreateDevice_Action"	"Dépannage"
 "[english]VRInitError_Compositor_UnableToCreateDevice_Action"	"Troubleshooting"
+"Lighthouse_BasestationInternalFault_06_Header"	"Station de base inutilisable"
+"[english]Lighthouse_BasestationInternalFault_06_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_06_Description"	"Une station de base a rencontré une erreur interne (erreur 06). Veuillez débrancher puis rebrancher le câble d’alimentation de la station de base dont le voyant rouge clignote. Si le problème persiste, veuillez contacter le constructeur pour recevoir de l'aide."
+"[english]Lighthouse_BasestationInternalFault_06_Description"	"A base station has developed an internal problem (fault 06). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
+"Lighthouse_BasestationInternalFault_06_Action"	"Visiter htcvive.com/support"
+"[english]Lighthouse_BasestationInternalFault_06_Action"	"Visit htcvive.com/support"
+"Lighthouse_BasestationInternalFault_07_Header"	"Station de base inutilisable"
+"[english]Lighthouse_BasestationInternalFault_07_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_07_Description"	"Une station de base a rencontré une erreur interne (erreur 07). Veuillez débrancher puis rebrancher le câble d’alimentation de la station de base dont le voyant rouge clignote. Si le problème persiste, veuillez contacter le constructeur pour recevoir de l'aide."
+"[english]Lighthouse_BasestationInternalFault_07_Description"	"A base station has developed an internal problem (fault 07). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
+"Lighthouse_BasestationInternalFault_07_Action"	"Visiter htcvive.com/support"
+"[english]Lighthouse_BasestationInternalFault_07_Action"	"Visit htcvive.com/support"
+"Warning_DismissableWarning_NeedKnucklesDriver_Header"	"Pilote des Knuckles disponible"
+"[english]Warning_DismissableWarning_NeedKnucklesDriver_Header"	"Knuckles Driver Available"
+"Warning_DismissableWarning_NeedKnucklesDriver_Description"	"Vous utilisez des contrôleurs Knuckle mais leur pilote n'est pas installé."
+"[english]Warning_DismissableWarning_NeedKnucklesDriver_Description"	"You are using Knuckes controllers, but don't have the Knuckles driver installed."
+"Warning_DismissableWarning_NeedKnucklesDriver_Action"	"Installer le pilote"
+"[english]Warning_DismissableWarning_NeedKnucklesDriver_Action"	"Install Driver"
+"Warning_DismissableWarning_NewDriverInstalled_Header"	"Nouveau pilote installé"
+"[english]Warning_DismissableWarning_NewDriverInstalled_Header"	"New Driver Installed"
+"Warning_DismissableWarning_NewDriverInstalled_Description"	"Un redémarrage de SteamVR est nécessaire pour utiliser le nouveau pilote."
+"[english]Warning_DismissableWarning_NewDriverInstalled_Description"	"To use your new driver you will need to restart SteamVR."
+"Warning_DismissableWarning_NewDriverInstalled_Action"	"Redémarrer"
+"[english]Warning_DismissableWarning_NewDriverInstalled_Action"	"Restart"
 }
 }
