--- a/content/vrmonitor/translations/vrmonitor_errors_hungarian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_hungarian.txt
@@ -843,5 +843,29 @@
 "[english]VRInitError_Compositor_UnableToCreateDevice_Description"	"The compositor was unable to create a graphics device as part of its initialization."
 "VRInitError_Compositor_UnableToCreateDevice_Action"	"Hibaelhárítás"
 "[english]VRInitError_Compositor_UnableToCreateDevice_Action"	"Troubleshooting"
+"Lighthouse_BasestationInternalFault_06_Header"	"Bázisállomás használhatatlan"
+"[english]Lighthouse_BasestationInternalFault_06_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_06_Description"	"Az egyik bázisállomásnál belső probléma adódott (06-os hiba). Kérjük, kapcsold ki, majd be a pirosan villogó jelzőfényű bázisállomást. Ha az állapot továbbra is fennáll, vedd fel a kapcsolatot a gyártóval segítségért."
+"[english]Lighthouse_BasestationInternalFault_06_Description"	"A base station has developed an internal problem (fault 06). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
+"Lighthouse_BasestationInternalFault_06_Action"	"Látogasd meg a htcvive.com/support oldalt"
+"[english]Lighthouse_BasestationInternalFault_06_Action"	"Visit htcvive.com/support"
+"Lighthouse_BasestationInternalFault_07_Header"	"Bázisállomás használhatatlan"
+"[english]Lighthouse_BasestationInternalFault_07_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_07_Description"	"Az egyik bázisállomásnál belső probléma adódott (07-es hiba). Kérjük, kapcsold ki, majd be a pirosan villogó jelzőfényű bázisállomást. Ha az állapot továbbra is fennáll, vedd fel a kapcsolatot a gyártóval segítségért."
+"[english]Lighthouse_BasestationInternalFault_07_Description"	"A base station has developed an internal problem (fault 07). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
+"Lighthouse_BasestationInternalFault_07_Action"	"Látogasd meg a htcvive.com/support oldalt"
+"[english]Lighthouse_BasestationInternalFault_07_Action"	"Visit htcvive.com/support"
+"Warning_DismissableWarning_NeedKnucklesDriver_Header"	"Knuckles illesztőprogram érhető el"
+"[english]Warning_DismissableWarning_NeedKnucklesDriver_Header"	"Knuckles Driver Available"
+"Warning_DismissableWarning_NeedKnucklesDriver_Description"	"Knuckles játékvezérlőt használsz, de nincs telepítve a Knuckles illesztőprogram."
+"[english]Warning_DismissableWarning_NeedKnucklesDriver_Description"	"You are using Knuckes controllers, but don't have the Knuckles driver installed."
+"Warning_DismissableWarning_NeedKnucklesDriver_Action"	"Illesztőprogram telepítése"
+"[english]Warning_DismissableWarning_NeedKnucklesDriver_Action"	"Install Driver"
+"Warning_DismissableWarning_NewDriverInstalled_Header"	"Új illesztőprogram telepítve"
+"[english]Warning_DismissableWarning_NewDriverInstalled_Header"	"New Driver Installed"
+"Warning_DismissableWarning_NewDriverInstalled_Description"	"Az új illesztőprogramod használatához újra kell indítanod a SteamVR-t."
+"[english]Warning_DismissableWarning_NewDriverInstalled_Description"	"To use your new driver you will need to restart SteamVR."
+"Warning_DismissableWarning_NewDriverInstalled_Action"	"Újraindítás"
+"[english]Warning_DismissableWarning_NewDriverInstalled_Action"	"Restart"
 }
 }
