--- a/content/vrmonitor/translations/vrmonitor_french.txt
+++ b/content/vrmonitor/translations/vrmonitor_french.txt
@@ -783,7 +783,7 @@
 "[english]FirmwareWizard_UpdateBasestation_Progress_Title"	"Update Base Station Firmware"
 "FirmwareWizard_UpdateBasestation_Progress_MiddleText"	"Mise à jour du firmware de la station de base. Cette opération peut prendre quelques minutes..."
 "[english]FirmwareWizard_UpdateBasestation_Progress_MiddleText"	"Updating base station firmware. This could take several minutes..."
-"FirmwareWizard_UpdateBasestation_Progress_LowerText"	"ATTENTION : Ne débranchez pas la station de base, ne branchez aucun autre périphérique et n'effectuez aucun changement système lors de la mise à jour du firmware. Effectuer une de ces actions pourrait rendre cette station de base inutilisable."
+"FirmwareWizard_UpdateBasestation_Progress_LowerText"	"ATTENTION : ne débranchez pas la station de base, ne branchez aucun autre périphérique et n'effectuez aucun changement système lors de la mise à jour du firmware. Effectuer une de ces actions pourrait rendre cette station de base inutilisable."
 "[english]FirmwareWizard_UpdateBasestation_Progress_LowerText"	"WARNING: Do not unplug the base station, plug in any additional devices, or make any other system changes while firmware is being updated. Doing so can render this base station unusable."
 "FirmwareWizard_UpdateBasestation_Fail_Title"	"Échec de la mise à jour du firmware de la station de base"
 "[english]FirmwareWizard_UpdateBasestation_Fail_Title"	"Firmware Base Station Failed"
@@ -1203,7 +1203,7 @@
 "[english]FirmwareWizard_UpdateBasestation_WirelessProgress_Title"	"Update Base Station Firmware"
 "FirmwareWizard_UpdateBasestation_WirelessProgress_MiddleText"	"Mise à jour du firmware de la station de base. Cette opération peut prendre plusieurs minutes..."
 "[english]FirmwareWizard_UpdateBasestation_WirelessProgress_MiddleText"	"Updating base station firmware. This could take several minutes..."
-"FirmwareWizard_UpdateBasestation_WirelessProgress_LowerText"	"ATTENTION : Ne débranchez pas la station de base, ne branchez aucun autre périphérique et n'effectuez aucun changement système lors de la mise à jour du firmware. Effectuer une de ces actions pourrait rendre cette station de base inutilisable."
+"FirmwareWizard_UpdateBasestation_WirelessProgress_LowerText"	"ATTENTION : ne débranchez pas la station de base, ne branchez aucun autre périphérique et n'effectuez aucun changement système lors de la mise à jour du firmware. Effectuer une de ces actions pourrait rendre cette station de base inutilisable."
 "[english]FirmwareWizard_UpdateBasestation_WirelessProgress_LowerText"	"WARNING: Do not unplug the base station, plug in any additional devices, or make any other system changes while firmware is being updated. Doing so can render this base station unusable."
 "FirmwareWizard_BaseStationBluetoothBLEUpdate"	"Mise à jour BLE"
 "[english]FirmwareWizard_BaseStationBluetoothBLEUpdate"	"Wireless BLE Update"
@@ -1947,13 +1947,15 @@
 "[english]BugReporter_SubmissionTimeout"	"Submission Timeout.\n\nThe network upload is taking longer than expected. Please try again later.\n"
 "BugReporter_ProgressSubmittingPercent"	"Envoi en cours... %1%"
 "[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
-"Settings_HomeAppCheck"	"Acceuil SteamVR Beta"
+"Settings_HomeAppCheck"	"Accueil de SteamVR Beta"
 "[english]Settings_HomeAppCheck"	"SteamVR Home Beta"
-"Settings_HomeAppDesc"	"Le nouvel accueil de SteamVR propose maintenant des environnements plus riches, des fonctionalités sociales et bien plus. Cette fonction est actuellement en bêta, aussi n’hésitez pas à nous donner votre avis sur les forums."
+"Settings_HomeAppDesc"	"Le nouvel accueil de SteamVR propose maintenant des environnements plus riches, des fonctionnalités sociales et bien plus. Cette fonction est actuellement en bêta, n’hésitez donc pas à nous donner votre avis sur les forums."
 "[english]Settings_HomeAppDesc"	"The new SteamVR Home experience supports richer home spaces, social features, and more. This feature is currently in Beta, please provide feedback on the forums."
 "Settings_NightModeCheck"	"Mode nuit"
 "[english]Settings_NightModeCheck"	"Night Mode"
-"Settings_NightModeDesc"	"Le mode nuit, atténue la luminosité du casque jusqu'à 5 heures du matin (ou jusqu'à ce que SteamVR soit redémarré)."
+"Settings_NightModeDesc"	"Le mode nuit atténue la luminosité du casque jusqu'à 5 heures du matin (ou jusqu'à ce que SteamVR soit redémarré)."
 "[english]Settings_NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
+"Settings_PauseOnStandby"	"Mettre en pause le rendu lorsque le casque est inactif"
+"[english]Settings_PauseOnStandby"	"Pause rendering when headset is idle"
 }
 }
