--- a/content/vrmonitor/translations/vrmonitor_german.txt
+++ b/content/vrmonitor/translations/vrmonitor_german.txt
@@ -1896,7 +1896,7 @@
 "[english]Settings_Advanced_Supersampling_Header"	"Supersampling"
 "Settings_Advanced_Supersampling_RequiresRestart"	"SteamVR muss neu gestartet werden, damit diese Änderung in Kraft treten kann."
 "[english]Settings_Advanced_Supersampling_RequiresRestart"	"This change requires a restart of SteamVR to take effect."
-"Explanation_Supersampling"	"Supersampling bewirkt, dass alle VR-Anwendungen in einer höheren oder niedrigeren Auflösung rendern als die native Auflösung des angeschlossenen Headsets.\n(Standardeinstellung: 1,0)"
+"Explanation_Supersampling"	"Supersampling bewirkt, dass alle VR-Anwendungen in einer höheren oder niedrigeren Auflösung rendern als die native Auflösung des angeschlossenen Headsets. (Standardeinstellung: 1,0). ACHTUNG: Einige Anwendungen reagieren möglicherweise nicht korrekt auf eine Änderung während des Betriebs und müssen neu gestartet werden."
 "[english]Explanation_Supersampling"	"Supersampling will cause all VR applications to render at higher or lower resolution than the native resolution of the attached headset (1.0 is the default). NOTE: Some applications may not correctly respond to a change while running and may need to be restarted."
 "MenuAction_Workshop_RunTools"	"Eine Umgebung erstellen/ändern"
 "[english]MenuAction_Workshop_RunTools"	"Create/Modify an Environment"
@@ -1926,10 +1926,14 @@
 "[english]BugReporter_ReportType"	"Report Type:"
 "BugReporter_ReportType_Bug"	"Fehler"
 "[english]BugReporter_ReportType_Bug"	"Bug"
+"BugReporter_ReportType_FeatureRequest"	"Funktionswunsch"
+"[english]BugReporter_ReportType_FeatureRequest"	"Feature Request"
 "BugReporter_ReportType_Feedback"	"Feedback"
 "[english]BugReporter_ReportType_Feedback"	"Feedback"
 "BugReporter_PreviewReport"	"Vorschau"
 "[english]BugReporter_PreviewReport"	"Preview Report"
+"BugReporter_IncludeCrashDumps"	"Absturzbericht anhängen"
+"[english]BugReporter_IncludeCrashDumps"	"Include Crash Dumps"
 "BugReporter_SubjectRequired"	"Bitte geben Sie einen Betreff an."
 "[english]BugReporter_SubjectRequired"	"Please supply a subject."
 "BugReporter_DescriptionRequired"	"Bitte geben Sie eine Beschreibung an."
@@ -1952,5 +1956,7 @@
 "[english]Settings_NightModeCheck"	"Night Mode"
 "Settings_NightModeDesc"	"Der Nachtmodus dimmt das Headset bis 5:00 Uhr morgens (oder bis SteamVR neu gestartet wurde)."
 "[english]Settings_NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
+"Settings_PauseOnStandby"	"Rendering pausieren, während das VR-Headset inaktiv ist"
+"[english]Settings_PauseOnStandby"	"Pause rendering when headset is idle"
 }
 }
