--- a/content/vrmonitor/translations/vrmonitor_schinese.txt
+++ b/content/vrmonitor/translations/vrmonitor_schinese.txt
@@ -1,4 +1,4 @@
-﻿"lang"
+"lang"
 {
 "Language"	"schinese"
 "Tokens"
@@ -1437,9 +1437,9 @@
 "[english]KnockKnock_Button"	"Knock Knock"
 "KnockKnock_Notification_Text"	"咚咚\nVR 世界之外的某人想要得到您的注意。"
 "[english]KnockKnock_Notification_Text"	"Knock Knock\nSomeone outside VR would like your attention."
-"MenuAction_Workshop_UploadItem"	"上传新文件"
+"MenuAction_Workshop_UploadItem"	"上传新背景"
 "[english]MenuAction_Workshop_UploadItem"	"Upload New Background"
-"MenuAction_Workshop_EditItem"	"修改现有文件"
+"MenuAction_Workshop_EditItem"	"修改现有背景"
 "[english]MenuAction_Workshop_EditItem"	"Modify Existing Background"
 "MenuAction_ModelDirectory_Browse"	"浏览模型目录"
 "[english]MenuAction_ModelDirectory_Browse"	"Browse Model Directory"
@@ -1885,7 +1885,7 @@
 "[english]Settings_Advanced_Supersampling_RequiresRestart"	"This change requires a restart of SteamVR to take effect."
 "Explanation_Supersampling"	"超级采样将使所有 VR 应用程序以比头戴显示器原始分辨率更高或更低的分辨率渲染（默认为1.0）。\\ n注意：一些应用程序在运行时可能无法正确响应更改，可能需要重新启动。"
 "[english]Explanation_Supersampling"	"Supersampling will cause all VR applications to render at higher or lower resolution than the native resolution of the attached headset (1.0 is the default). NOTE: Some applications may not correctly respond to a change while running and may need to be restarted."
-"MenuAction_Workshop_RunTools"	"创建/更新环境"
+"MenuAction_Workshop_RunTools"	"创建/修改环境"
 "[english]MenuAction_Workshop_RunTools"	"Create/Modify an Environment"
 "MenuAction_Workshop_ViewWiki"	"SteamVR 环境 Wiki"
 "[english]MenuAction_Workshop_ViewWiki"	"SteamVR Environments Wiki"
@@ -1901,6 +1901,10 @@
 "[english]MessageBox_Submit"	"Submit"
 "BugReporter_Title"	"报告错误"
 "[english]BugReporter_Title"	"Report A Bug"
+"BugReporter_Explanation"	"感谢您协助 Valve 改善 SteamVR。\n\n问题反馈工具将自动生成一份关于 SteamVR 的反馈报告，其中包含您的系统配置、执行环境，以及 SteamVR 的使用记录发送给 Valve 用以分析。"
+"[english]BugReporter_Explanation"	"Thank you for helping Valve improve SteamVR.\n\nThis bug reporter generates a SteamVR System Report which gathers system, environment, and SteamVR logging for use by Valve for diagnostics."
+"BugReporter_ForPersonalSupport"	"该项并不属于客服案件，您不会收到任何回复。如果您有 SteamVR 方面的问题，想与客服联系寻求帮助，请前往支持站点。"
+"[english]BugReporter_ForPersonalSupport"	"This is not a support ticket and you will not receive a direct response. To receive personalized SteamVR support from an agent, please visit the support site."
 "BugReporter_SteamVRSupport"	"SteamVR 客服"
 "[english]BugReporter_SteamVRSupport"	"SteamVR Support"
 "BugReporter_Subject"	"主题："
