--- a/content/vrmonitor/translations/vrmonitor_spanish.txt
+++ b/content/vrmonitor/translations/vrmonitor_spanish.txt
@@ -587,7 +587,7 @@
 "[english]PerfTestResults_GraphCPU"	"(Below the 11ms blue line is good.)"
 "StatusError_LighthouseEvent"	"Problemas con el sistema Lighthouse."
 "[english]StatusError_LighthouseEvent"	"Problems with the Lighthouse System."
-"MenuAction_PairingWizard"	"Emparejar controlador"
+"MenuAction_PairingWizard"	"Emparejar mando"
 "[english]MenuAction_PairingWizard"	"Pair Controller"
 "Advanced_Advanced"	"Avanzado"
 "[english]Advanced_Advanced"	"Advanced"
@@ -865,7 +865,7 @@
 "[english]FirmwareWizard_UpdateBasestation_Progress_UpperText"	""
 "FirmwareWizard_UpdateBasestation_Fail_UpperText"	"No se ha podido actualizar el firmware."
 "[english]FirmwareWizard_UpdateBasestation_Fail_UpperText"	"Firmware update failed."
-"Settings_Developer_Text"	"Configuración del desarrollador"
+"Settings_Developer_Text"	"Ajustes de desarrollador"
 "[english]Settings_Developer_Text"	"Developer Settings"
 "Settings_Developer_Info"	"Muestra ajustes y opciones avanzadas para desarrolladores"
 "[english]Settings_Developer_Info"	"Shows advanced settings and options for developers"
@@ -925,8 +925,10 @@
 "[english]PerfTestResults_ShowDetails"	"Show Details"
 "PerfTestResults_HideDetails"	"Ocultar detalles"
 "[english]PerfTestResults_HideDetails"	"Hide Details"
-"MenuAction_RebootVive"	"Reiniciar HMD Vive"
+"MenuAction_RebootVive"	"Reiniciar visor Vive"
 "[english]MenuAction_RebootVive"	"Reboot Vive headset"
+"Explanation_RebootVive"	"Reinicia el visor Vive. Esto podría solucionar errores del visor relacionados con el USB."
+"[english]Explanation_RebootVive"	"Reboot your Vive headset - this may fix USB related headset issues."
 "PerfTestResults_Results"	"Resultados"
 "[english]PerfTestResults_Results"	"Results"
 "Advanced_USB"	"USB"
@@ -959,7 +961,7 @@
 "[english]Settings_USB_NoDevicesFound"	"<font color=red><b>No Vive Devices are connected.</b></font>"
 "Settings_USB_ViveLinkBoxHeader"	"<b>Link Box de Vive:</b>"
 "[english]Settings_USB_ViveLinkBoxHeader"	"<b>Vive Link Box:</b>"
-"Settings_USB_ViveHeadsetHeader"	"<b>HMD Vive:</b>"
+"Settings_USB_ViveHeadsetHeader"	"<b>Visor Vive:</b>"
 "[english]Settings_USB_ViveHeadsetHeader"	"<b>Vive Headset:</b>"
 "Settings_USB_Refresh"	"Actualizar"
 "[english]Settings_USB_Refresh"	"Refresh"
@@ -1097,7 +1099,7 @@
 "[english]FirmwareWizard_EnterBootloaderMode"	"Enter Bootloader Mode"
 "FirmwareWizard_WatchmanDiskUpdate"	"Actualización de disco Watchman"
 "[english]FirmwareWizard_WatchmanDiskUpdate"	"Watchman Disk Update"
-"Settings_Audio_Header"	"Configuración de audio"
+"Settings_Audio_Header"	"Ajustes de audio"
 "[english]Settings_Audio_Header"	"Audio Settings"
 "Settings_Audio_On"	"Cuando SteamVR está activo"
 "[english]Settings_Audio_On"	"When SteamVR is active"
@@ -1401,6 +1403,10 @@
 "[english]Settings_NotificationKnockKnock_Text"	"Knock Knock"
 "KnockKnock_Button"	"Toc, toc"
 "[english]KnockKnock_Button"	"Knock Knock"
+"MenuAction_Workshop_UploadItem"	"Cargar nuevo fondo"
+"[english]MenuAction_Workshop_UploadItem"	"Upload New Background"
+"MenuAction_Workshop_EditItem"	"Modificar el fondo actual"
+"[english]MenuAction_Workshop_EditItem"	"Modify Existing Background"
 "WorkshopUpload_SelectContentType"	"Tipo"
 "[english]WorkshopUpload_SelectContentType"	"Type"
 "WorkshopUpload_SelectContentType_Background"	"Fondo"
@@ -1453,6 +1459,8 @@
 "[english]About_DateString"	"MMM d, yyyy %1 hh:mm"
 "About_DateString_Argument"	"a las"
 "[english]About_DateString_Argument"	"at"
+"About_VersionPrefix"	"Versión %1"
+"[english]About_VersionPrefix"	"Version %1"
 "DismissableWarning_Windows8"	"Windows 8 (0x8000)"
 "[english]DismissableWarning_Windows8"	"Windows 8 (0x8000)"
 "Settings_EnableScreenshots_Info"	"Si se activa, accionar el gatillo mientras se mantiene pulsado el botón System hará una captura de pantalla."
@@ -1511,6 +1519,8 @@
 "[english]FirmwareWizard_UpdateBasestation_Wireless_LowerText"	""
 "FirmwareWizard_UpdateBasestation_Continue"	"Continuar"
 "[english]FirmwareWizard_UpdateBasestation_Continue"	"Continue"
+"PlaylistEntryDefaultName"	"Entrada"
+"[english]PlaylistEntryDefaultName"	"Entry"
 "PlaylistListDefaultName"	"Lista de reproducción"
 "[english]PlaylistListDefaultName"	"Playlist"
 "PlaylistEditor_WindowTitle"	"Editor de listas de reproducción"
@@ -1535,10 +1545,14 @@
 "[english]PlaylistEditor_General_Tab"	"General"
 "PlaylistEditor_Detail_Name_Label"	"Nombre:"
 "[english]PlaylistEditor_Detail_Name_Label"	"Name:"
+"PlaylistEditor_Detail_Entry_Text"	"Entrada"
+"[english]PlaylistEditor_Detail_Entry_Text"	"Entry"
 "PlaylistEditor_Detail_Executable_Label"	"Ejecutable:"
 "[english]PlaylistEditor_Detail_Executable_Label"	"Executable:"
 "PlaylistEditor_Detail_DotDotDot_Label"	"..."
 "[english]PlaylistEditor_Detail_DotDotDot_Label"	"..."
+"PlaylistEditor_Detail_Arguments_Label"	"Argumentos:"
+"[english]PlaylistEditor_Detail_Arguments_Label"	"Arguments:"
 "PlaylistEditor_Detail_Environment_Label"	"Entorno:"
 "[english]PlaylistEditor_Detail_Environment_Label"	"Environment:"
 "PlaylistEditor_Detail_WorkingDirectory_Label"	"Directorio de trabajo:"
@@ -1585,18 +1599,36 @@
 "[english]PlaylistEditor_General_DotDotDot_Label"	"..."
 "PlaylistEditor_General_ForceAudioVolume_Label"	"Forzar volumen de audio:"
 "[english]PlaylistEditor_General_ForceAudioVolume_Label"	"Force Audio Volume:"
+"PlaylistEditor_General_PlaySoundBeforeEnd_Label"	"Reproducir sonido antes del final:"
+"[english]PlaylistEditor_General_PlaySoundBeforeEnd_Label"	"Play sound before end:"
 "PlaylistEditor_General_Seconds_Label"	"segundos"
 "[english]PlaylistEditor_General_Seconds_Label"	"seconds"
+"PlaylistEditor_General_WaitForNext_Label"	"Esperar al siguiente:"
+"[english]PlaylistEditor_General_WaitForNext_Label"	"Wait for Next:"
 "PlaylistEditor_NotSavedYet_Text"	"No se ha guardado aún."
 "[english]PlaylistEditor_NotSavedYet_Text"	"Not saved yet."
+"PlaylistEditor_AddEntry_Text"	"Entrada %1"
+"[english]PlaylistEditor_AddEntry_Text"	"Entry %1"
 "PlaylistEditor_LoadPlaylist_FileSelector"	"Cargar lista de reproducción"
 "[english]PlaylistEditor_LoadPlaylist_FileSelector"	"Load Playlist"
 "PlaylistEditor_SavePlaylist_FileSelector"	"Guardar lista de reproducción"
 "[english]PlaylistEditor_SavePlaylist_FileSelector"	"Save Playlist"
+"PlaylistEditor_SelectExecutable_FileSelector"	"Seleccionar ruta de acceso ejecutable"
+"[english]PlaylistEditor_SelectExecutable_FileSelector"	"Select Executable Path"
+"PlaylistEditor_SelectWorkingDirectory_FileSelector"	"Seleccionar directorio de trabajo"
+"[english]PlaylistEditor_SelectWorkingDirectory_FileSelector"	"Select Working Directory"
+"PlaylistEditor_SelectImageForPlacecard_FileSelector"	"Seleccionar imagen para la tarjeta"
+"[english]PlaylistEditor_SelectImageForPlacecard_FileSelector"	"Select Image for Placecard"
 "PlaylistPlayer_WindowTitle"	"Reproductor de listas"
 "[english]PlaylistPlayer_WindowTitle"	"Playlist Player"
 "PlaylistPlayer_WindowTitle_WithName"	"Reproductor de listas - %1"
 "[english]PlaylistPlayer_WindowTitle_WithName"	"Playlist Player - %1"
+"PlaylistPlayer_All_Checkbox"	"Todos"
+"[english]PlaylistPlayer_All_Checkbox"	"All"
+"PlaylistPlayer_ForceSoundVolume_Checkbox"	"Forzar volumen del sonido"
+"[english]PlaylistPlayer_ForceSoundVolume_Checkbox"	"Force Sound Volume"
+"PlaylistPlayer_ManualNext_Checkbox"	"Avanzar manualmente"
+"[english]PlaylistPlayer_ManualNext_Checkbox"	"Manual Next"
 "PlaylistPlayer_Length_Header"	"Duración"
 "[english]PlaylistPlayer_Length_Header"	"Length"
 "PlaylistPlayer_Durations_Header"	"Duraciones"
@@ -1609,8 +1641,12 @@
 "[english]PlaylistPlayer_Next_Label"	"Next:"
 "PlaylistPlayer_Current_Label"	"Actual:"
 "[english]PlaylistPlayer_Current_Label"	"Current:"
+"PlaylistPlayer_Overall_Label"	"Global:"
+"[english]PlaylistPlayer_Overall_Label"	"Overall:"
 "PlaylistPlayer_PlaySound_Button"	"Reproducir sonido"
 "[english]PlaylistPlayer_PlaySound_Button"	"Play Sound"
+"PlaylistPlayer_Run_Button"	"Iniciar"
+"[english]PlaylistPlayer_Run_Button"	"Run"
 "PlaylistPlayer_Stop_Button"	"Detener"
 "[english]PlaylistPlayer_Stop_Button"	"Stop"
 "PlaylistPlayer_Next_Button"	"Siguiente"
@@ -1619,18 +1655,36 @@
 "[english]PlaylistPlayer_MasterVolume_Label"	"Master Volume"
 "PlaylistPlayer_Continue_Button"	"Continuar"
 "[english]PlaylistPlayer_Continue_Button"	"Continue"
+"PlaylistPlayer_State_NotRunning"	"No está en ejecución"
+"[english]PlaylistPlayer_State_NotRunning"	"Not Running"
+"PlaylistPlayer_State_Starting"	"Iniciando"
+"[english]PlaylistPlayer_State_Starting"	"Starting"
+"PlaylistPlayer_State_Running"	"En ejecución"
+"[english]PlaylistPlayer_State_Running"	"Running"
 "PlaylistPlayer_State_Unknown"	"Estado desconocido"
 "[english]PlaylistPlayer_State_Unknown"	"Unknown State"
 "PlaylistPlayer_ProcessError_FailedToStart"	"Error al iniciar"
 "[english]PlaylistPlayer_ProcessError_FailedToStart"	"Failed To Start"
+"PlaylistPlayer_ProcessError_Timeout"	"Tiempo de espera"
+"[english]PlaylistPlayer_ProcessError_Timeout"	"Timeout"
 "PlaylistPlayer_ProcessError_WriteError"	"Error de escritura"
 "[english]PlaylistPlayer_ProcessError_WriteError"	"Write Error"
 "PlaylistPlayer_ProcessError_ReadError"	"Error de lectura"
 "[english]PlaylistPlayer_ProcessError_ReadError"	"Read Error"
 "PlaylistPlayer_ProcessError_Unknown"	" "
 "[english]PlaylistPlayer_ProcessError_Unknown"	""
+"PlaylistPlayer_StatusOfCurrentDemo_Text"	"Estado de la demo actual: %1 %2"
+"[english]PlaylistPlayer_StatusOfCurrentDemo_Text"	"Status of current demo: %1 %2"
+"PlaylistPlayer_PrerollState_Text"	"Preprocesar"
+"[english]PlaylistPlayer_PrerollState_Text"	"Preroll "
 "PlaylistPlayer_StatusOfCurrentEntryPause_Text"	"%1Estado de la entrada actual: pausa"
 "[english]PlaylistPlayer_StatusOfCurrentEntryPause_Text"	"%1Status of current entry: Pause"
+"PlaylistOverlay_Title"	"Control remoto de la lista de reproducción"
+"[english]PlaylistOverlay_Title"	"Playlist Remote Control"
+"PlaylistOverlay_NextEntry"	"Siguiente entrada"
+"[english]PlaylistOverlay_NextEntry"	"Next Entry"
+"PlaylistOverlay_GotoFirstEntry"	"Ir a la primera entrada"
+"[english]PlaylistOverlay_GotoFirstEntry"	"Goto First Entry"
 "Settings_ArcadeMode"	"Activar modo arcade"
 "[english]Settings_ArcadeMode"	"Enable Arcade Mode"
 "Settings_AllowAsyncReprojection"	"Permitir reproyección asincrónica"
@@ -1641,24 +1695,38 @@
 "[english]Advanced_AsyncNotActive"	"Async Reprojection Off"
 "Lighthouse_BasestationInternalFault_01_Header"	"Estación base inservible"
 "[english]Lighthouse_BasestationInternalFault_01_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_01_Description"	"Una estación base ha desarrollado un problema interno (error 01). Apaga y enciende la estación base que muestra una luz roja intermitente. Si el problema persiste, ponte en contacto con el fabricante para obtener ayuda."
+"[english]Lighthouse_BasestationInternalFault_01_Description"	"A base station has developed an internal problem (fault 01). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
 "Lighthouse_BasestationInternalFault_01_Action"	"Visitar htcvive.com/support"
 "[english]Lighthouse_BasestationInternalFault_01_Action"	"Visit htcvive.com/support"
 "Lighthouse_BasestationInternalFault_02_Header"	"Estación base inservible"
 "[english]Lighthouse_BasestationInternalFault_02_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_02_Description"	"Una estación base ha desarrollado un problema interno (error 02). Apaga y enciende la estación base que muestra una luz roja intermitente. Si el problema persiste, ponte en contacto con el fabricante para obtener ayuda."
+"[english]Lighthouse_BasestationInternalFault_02_Description"	"A base station has developed an internal problem (fault 02). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
 "Lighthouse_BasestationInternalFault_02_Action"	"Visitar htcvive.com/support"
 "[english]Lighthouse_BasestationInternalFault_02_Action"	"Visit htcvive.com/support"
 "Lighthouse_BasestationInternalFault_03_Header"	"Estación base inservible"
 "[english]Lighthouse_BasestationInternalFault_03_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_03_Description"	"Una estación base ha desarrollado un problema interno (error 03). Apaga y enciende la estación base que muestra una luz roja intermitente. Si el problema persiste, ponte en contacto con el fabricante para obtener ayuda."
+"[english]Lighthouse_BasestationInternalFault_03_Description"	"A base station has developed an internal problem (fault 03). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
 "Lighthouse_BasestationInternalFault_03_Action"	"Visitar htcvive.com/support"
 "[english]Lighthouse_BasestationInternalFault_03_Action"	"Visit htcvive.com/support"
 "Lighthouse_BasestationInternalFault_04_Header"	"Estación base inservible"
 "[english]Lighthouse_BasestationInternalFault_04_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_04_Description"	"Una estación base ha desarrollado un problema interno (error 04). Apaga y enciende la estación base que muestra una luz roja intermitente. Si el problema persiste, ponte en contacto con el fabricante para obtener ayuda."
+"[english]Lighthouse_BasestationInternalFault_04_Description"	"A base station has developed an internal problem (fault 04). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
 "Lighthouse_BasestationInternalFault_04_Action"	"Visitar htcvive.com/support"
 "[english]Lighthouse_BasestationInternalFault_04_Action"	"Visit htcvive.com/support"
 "Lighthouse_BasestationInternalFault_05_Header"	"Estación base inservible"
 "[english]Lighthouse_BasestationInternalFault_05_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_05_Description"	"Una estación base ha desarrollado un problema interno (error 05). Apaga y enciende la estación base que muestra una luz roja intermitente. Si el problema persiste, ponte en contacto con el fabricante para obtener ayuda."
+"[english]Lighthouse_BasestationInternalFault_05_Description"	"A base station has developed an internal problem (fault 05). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
 "Lighthouse_BasestationInternalFault_05_Action"	"Visitar htcvive.com/support"
 "[english]Lighthouse_BasestationInternalFault_05_Action"	"Visit htcvive.com/support"
+"RebootWhileAppRunning_Title"	"Reinicio de SteamVR"
+"[english]RebootWhileAppRunning_Title"	"SteamVR Reboot"
+"RebootWhileAppRunning_Format"	"Reiniciar SteamVR también cerrará %1. ¿Deseas continuar?"
+"[english]RebootWhileAppRunning_Format"	"Rebooting SteamVR will also shut down'%1'. Do you wish to reboot?"
 "FirmwareWizard_UpdateGenericTracker_Fail_Title"	"No se ha podido actualizar el firmware"
 "[english]FirmwareWizard_UpdateGenericTracker_Fail_Title"	"Firmware Update Failed"
 "FirmwareWizard_UpdateGenericTracker_Fail_UpperText"	"No se ha podido actualizar el firmware."
@@ -1669,12 +1737,16 @@
 "[english]Settings_Advanced_Supersampling_Header"	"Supersampling"
 "Settings_Advanced_Supersampling_RequiresRestart"	"Para que este cambio tenga efecto debes reiniciar SteamVR."
 "[english]Settings_Advanced_Supersampling_RequiresRestart"	"This change requires a restart of SteamVR to take effect."
-"Explanation_Supersampling"	"El supermuestreo hará que todas las aplicaciones de RV se presenten a una resolución superior (o inferior) a la nativa del visor conectado.\n(1.0 es el valor predeterminado)"
+"Explanation_Supersampling"	"El supermuestreo hará que todas las aplicaciones de RV se presenten a una resolución superior o inferior a la nativa del visor conectado (1.0 es el valor predeterminado). NOTA: Es posible que algunas aplicaciones no respondan correctamente a un cambio realizado mientras se ejecutan y deban reiniciarse."
 "[english]Explanation_Supersampling"	"Supersampling will cause all VR applications to render at higher or lower resolution than the native resolution of the attached headset (1.0 is the default). NOTE: Some applications may not correctly respond to a change while running and may need to be restarted."
 "MenuAction_Workshop_RunTools"	"Crear/Modificar un entorno"
 "[english]MenuAction_Workshop_RunTools"	"Create/Modify an Environment"
 "MenuAction_Workshop_ViewWiki"	"Wiki de entornos de SteamVR"
 "[english]MenuAction_Workshop_ViewWiki"	"SteamVR Environments Wiki"
+"Settings_Advanced_AllowSupersampleFiltering"	"Activar filtrado de supermuestreo avanzado"
+"[english]Settings_Advanced_AllowSupersampleFiltering"	"Enable Advanced Supersample Filtering"
+"Explanation_SupersamplingFiltering"	"Opciones de filtrado de supermuestreo:"
+"[english]Explanation_SupersamplingFiltering"	"Supersampling Filtering Options:"
 "MenuAction_ReportABug"	"Informar de un error"
 "[english]MenuAction_ReportABug"	"Report A Bug"
 "BugReporter_Title"	"Informar de un error"
@@ -1689,12 +1761,22 @@
 "[english]BugReporter_ReportType"	"Report Type:"
 "BugReporter_ReportType_Bug"	"Fallo"
 "[english]BugReporter_ReportType_Bug"	"Bug"
+"BugReporter_IncludeReportAndLogs"	"Incluye el informe del sistema y los registros."
+"[english]BugReporter_IncludeReportAndLogs"	"Include System Report And Logs"
+"BugReporter_SubjectRequired"	"Introduce un asunto."
+"[english]BugReporter_SubjectRequired"	"Please supply a subject."
+"BugReporter_DescriptionRequired"	"Introduce una descripción."
+"[english]BugReporter_DescriptionRequired"	"Please supply a description."
 "BugReporter_FailedToCreateZip"	"No se ha podido crear el adjunto ZIP."
 "[english]BugReporter_FailedToCreateZip"	"Failed to create ZIP attachment."
+"BugReporter_SteamLoginRequired"	"Debes iniciar sesión en tu cuenta de Steam para informar de un error."
+"[english]BugReporter_SteamLoginRequired"	"You need to be logged in to your Steam account to Report A Bug."
 "BugReporter_SubmissionSuccess"	"El envío se ha realizado con éxito.\n\nGracias."
 "[english]BugReporter_SubmissionSuccess"	"Submission Successful.\n\nThank You."
 "BugReporter_ProgressSubmitting"	"Enviando..."
 "[english]BugReporter_ProgressSubmitting"	"Submitting..."
+"BugReporter_SubmissionTimeout"	"Error en el envío.\n\nLa carga está tardando más de lo esperado. Inténtalo de nuevo más tarde.\n"
+"[english]BugReporter_SubmissionTimeout"	"Submission Timeout.\n\nThe network upload is taking longer than expected. Please try again later.\n"
 "BugReporter_ProgressSubmittingPercent"	"Enviando...%1%"
 "[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
 "Settings_HomeAppCheck"	"Inicio de SteamVR Beta"
@@ -1705,5 +1787,7 @@
 "[english]Settings_NightModeCheck"	"Night Mode"
 "Settings_NightModeDesc"	"El modo nocturno reduce el brillo del visor hasta las 5 a. m. (o hasta que se reinicie SteamVR)."
 "[english]Settings_NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
+"Settings_PauseOnStandby"	"Detener el renderizado cuando el visor esté inactivo."
+"[english]Settings_PauseOnStandby"	"Pause rendering when headset is idle"
 }
 }
