--- a/content/vrmonitor/translations/vrmonitor_tchinese.txt
+++ b/content/vrmonitor/translations/vrmonitor_tchinese.txt
@@ -1,4 +1,4 @@
-﻿"lang"
+"lang"
 {
 "Language"	"tchinese"
 "Tokens"
@@ -1437,9 +1437,9 @@
 "[english]KnockKnock_Button"	"Knock Knock"
 "KnockKnock_Notification_Text"	"叩叩\nVR 世界外的某人想要引起您的注意。"
 "[english]KnockKnock_Notification_Text"	"Knock Knock\nSomeone outside VR would like your attention."
-"MenuAction_Workshop_UploadItem"	"上傳新物品"
+"MenuAction_Workshop_UploadItem"	"上傳新背景"
 "[english]MenuAction_Workshop_UploadItem"	"Upload New Background"
-"MenuAction_Workshop_EditItem"	"修改現有物品"
+"MenuAction_Workshop_EditItem"	"修改現有背景"
 "[english]MenuAction_Workshop_EditItem"	"Modify Existing Background"
 "MenuAction_ModelDirectory_Browse"	"瀏覽模型目錄"
 "[english]MenuAction_ModelDirectory_Browse"	"Browse Model Directory"
@@ -1835,27 +1835,55 @@
 "[english]Settings_StatusWindowMinimizeToTray_Text"	"When minimized, SteamVR Status minimizes to the system tray"
 "ShutdownWhileAppRunning_Title"	"SteamVR 關閉"
 "[english]ShutdownWhileAppRunning_Title"	"SteamVR Shutdown"
+"ShutdownWhileAppRunning_Format"	"關閉 SteamVR 將會一併關閉「%1」。您確定要繼續？"
+"[english]ShutdownWhileAppRunning_Format"	"Shutting down SteamVR will also shut down '%1'. Do you wish to continue?"
 "RebootWhileAppRunning_Title"	"SteamVR 重新啟動"
 "[english]RebootWhileAppRunning_Title"	"SteamVR Reboot"
+"TrackedDeviceClass_GenericTracker"	"追蹤器"
+"[english]TrackedDeviceClass_GenericTracker"	"Tracker"
+"MenuAction_PairTracker"	"配對追蹤器"
+"[english]MenuAction_PairTracker"	"Pair Tracker"
+"MenuAction_PowerOffTracker"	"關閉追蹤器電源"
+"[english]MenuAction_PowerOffTracker"	"Power Off Tracker"
 "Advanced_Generic_Tracker"	"定位器"
 "[english]Advanced_Generic_Tracker"	"Tracker"
+"FirmwareWizard_UpdateGenericTracker_Start_Title"	"更新追蹤器韌體"
+"[english]FirmwareWizard_UpdateGenericTracker_Start_Title"	"Update Tracker Firmware"
+"FirmwareWizard_UpdateGenericTracker_Start_MiddleText"	"將追蹤器以 micro-USB 線連接至您的電腦。您可以使用追蹤器的充電線材來連接。"
+"[english]FirmwareWizard_UpdateGenericTracker_Start_MiddleText"	"Plug this tracker into your computer with a micro-USB cable. You can use the same cable that is used to charge your tracker."
+"FirmwareWizard_UpdateGenericTracker_Start_LowerText"	"當偵測到追蹤器，韌體將自動開始更新。"
+"[english]FirmwareWizard_UpdateGenericTracker_Start_LowerText"	"The firmware update will start automatically once your tracker is detected."
+"FirmwareWizard_UpdateGenericTracker_Progress_Title"	"更新追蹤器韌體"
+"[english]FirmwareWizard_UpdateGenericTracker_Progress_Title"	"Update Tracker Firmware"
+"FirmwareWizard_UpdateGenericTracker_Progress_MiddleText"	"追蹤器韌體正在更新。這可能需要幾分鐘…"
+"[english]FirmwareWizard_UpdateGenericTracker_Progress_MiddleText"	"Updating tracker firmware. This could take several minutes..."
+"FirmwareWizard_UpdateGenericTracker_Progress_LowerText"	"警告：韌體更新時請勿拔除追蹤器、插入其他裝置或變更系統設定，這麼做可能會導致追蹤器無法使用。"
+"[english]FirmwareWizard_UpdateGenericTracker_Progress_LowerText"	"WARNING: Do not unplug the tracker, plug in any additional devices, or make any other system changes while firmware is being updated. Doing so can render this tracker unusable."
 "FirmwareWizard_UpdateGenericTracker_Fail_Title"	"韌體更新失敗"
 "[english]FirmwareWizard_UpdateGenericTracker_Fail_Title"	"Firmware Update Failed"
 "FirmwareWizard_UpdateGenericTracker_Fail_UpperText"	"韌體更新失敗。"
 "[english]FirmwareWizard_UpdateGenericTracker_Fail_UpperText"	"Firmware update failed."
+"FirmwareWizard_UpdateGenericTracker_Fail_MiddleText"	"請確認追蹤器以 micro-USB 線牢牢連接至電腦。如果更新持續失敗，請關閉 SteamVR。如果追蹤器電源未同時關閉，請長按系統鍵將其關閉，再重新啟動 SteamVR 並嘗試更新。"
+"[english]FirmwareWizard_UpdateGenericTracker_Fail_MiddleText"	"Make sure your tracker is securely connected to your computer by micro-USB. If this continues to fail, quit SteamVR. If your tracker didn't turn off, power it off by pressing and holding the system button. Then launch SteamVR and try again."
 "FirmwareWizard_UpdateGenericTracker_Fail_LowerText"	"按下面的「重試」去再試一次。"
 "[english]FirmwareWizard_UpdateGenericTracker_Fail_LowerText"	"Click 'Retry' below to try again."
+"FirmwareWizard_UpdateGenericTracker_Success_Title"	"更新追蹤器韌體"
+"[english]FirmwareWizard_UpdateGenericTracker_Success_Title"	"Update Tracker Firmware"
 "FirmwareWizard_UpdateGenericTracker_Success_UpperText"	"成功！"
 "[english]FirmwareWizard_UpdateGenericTracker_Success_UpperText"	"Success!"
+"FirmwareWizard_UpdateGenericTracker_Success_MiddleText"	"追蹤器韌體更新成功。您可能需要將電源關閉，並重新啟動追蹤器使更新生效。"
+"[english]FirmwareWizard_UpdateGenericTracker_Success_MiddleText"	"Tracker firmware successfully updated. You may need to power cycle the tracker before the firmware registers as updated. "
 "FirmwareWizard_UpdateGenericTracker_Success_LowerText"	"點擊「完成」來結束，或是「更新更多韌體」來更新其它硬體。"
 "[english]FirmwareWizard_UpdateGenericTracker_Success_LowerText"	"Click 'Done' to finish, or 'Update More Firmware' if you have more hardware to update. "
+"VRInitError_Driver_HmdUnknown_Description"	"找不到記錄於設定當中的頭戴顯示器之序號。"
+"[english]VRInitError_Driver_HmdUnknown_Description"	"The specific headset serial number named in the settings cannot be found."
 "Settings_Advanced_Supersampling_Header"	"超取樣"
 "[english]Settings_Advanced_Supersampling_Header"	"Supersampling"
 "Settings_Advanced_Supersampling_RequiresRestart"	"本次變更需要重新啟動 SteamVR 才能生效。"
 "[english]Settings_Advanced_Supersampling_RequiresRestart"	"This change requires a restart of SteamVR to take effect."
 "Explanation_Supersampling"	"超取樣技術將使所有 VR 應用程式呈現比連結的頭戴顯示器的原生解析度更高或更低的解析度。（預設為 1.0）。注意：有些應用程式在執行時可能無法正確對應此變更，可能需要重新啟動。"
 "[english]Explanation_Supersampling"	"Supersampling will cause all VR applications to render at higher or lower resolution than the native resolution of the attached headset (1.0 is the default). NOTE: Some applications may not correctly respond to a change while running and may need to be restarted."
-"MenuAction_Workshop_RunTools"	"建立／更新場景"
+"MenuAction_Workshop_RunTools"	"建立 / 更新場景"
 "[english]MenuAction_Workshop_RunTools"	"Create/Modify an Environment"
 "MenuAction_Workshop_ViewWiki"	"SteamVR 場景維基"
 "[english]MenuAction_Workshop_ViewWiki"	"SteamVR Environments Wiki"
@@ -1871,10 +1899,16 @@
 "[english]MessageBox_Submit"	"Submit"
 "BugReporter_Title"	"回報錯誤"
 "[english]BugReporter_Title"	"Report A Bug"
+"BugReporter_Explanation"	"感謝您協助 Valve 改善 SteamVR。\n\n問題回報器將會傳送一份含有系統配置、執行環境以及 SteamVR 記錄檔的 SteamVR 系統報告供 Valve 分析問題所在。"
+"[english]BugReporter_Explanation"	"Thank you for helping Valve improve SteamVR.\n\nThis bug reporter generates a SteamVR System Report which gathers system, environment, and SteamVR logging for use by Valve for diagnostics."
+"BugReporter_ForPersonalSupport"	"這並不是客服案件，您也不會收到任何回覆。如果您有 SteamVR 方面的問題，欲聯繫客服人員尋求協助，請前往客服網站。"
+"[english]BugReporter_ForPersonalSupport"	"This is not a support ticket and you will not receive a direct response. To receive personalized SteamVR support from an agent, please visit the support site."
 "BugReporter_SteamVRSupport"	"SteamVR 客服"
 "[english]BugReporter_SteamVRSupport"	"SteamVR Support"
 "BugReporter_Subject"	"主題："
 "[english]BugReporter_Subject"	"Subject:"
+"BugReporter_CharactersRemaining"	"尚餘 %1 個字元"
+"[english]BugReporter_CharactersRemaining"	"%1 Characters Remaining"
 "BugReporter_Description"	"描述："
 "[english]BugReporter_Description"	"Description:"
 "BugReporter_ReportType"	"回報類型："
@@ -1885,9 +1919,39 @@
 "[english]BugReporter_ReportType_FeatureRequest"	"Feature Request"
 "BugReporter_ReportType_Feedback"	"意見回饋"
 "[english]BugReporter_ReportType_Feedback"	"Feedback"
+"BugReporter_PreviewReport"	"預覽回報內容"
+"[english]BugReporter_PreviewReport"	"Preview Report"
+"BugReporter_IncludeReportAndLogs"	"包含系統報告和記錄檔"
+"[english]BugReporter_IncludeReportAndLogs"	"Include System Report And Logs"
+"BugReporter_IncludeCrashDumps"	"包含記憶體損毀傾印檔"
+"[english]BugReporter_IncludeCrashDumps"	"Include Crash Dumps"
+"BugReporter_SubjectRequired"	"請輸入標題。"
+"[english]BugReporter_SubjectRequired"	"Please supply a subject."
+"BugReporter_DescriptionRequired"	"請輸入問題說明。"
+"[english]BugReporter_DescriptionRequired"	"Please supply a description."
+"BugReporter_FailedToCreateZip"	"無法建立 ZIP 附件。"
+"[english]BugReporter_FailedToCreateZip"	"Failed to create ZIP attachment."
+"BugReporter_SteamLoginRequired"	"您需要登入 Steam 帳戶才能回報問題。"
+"[english]BugReporter_SteamLoginRequired"	"You need to be logged in to your Steam account to Report A Bug."
+"BugReporter_SubmissionSuccess"	"提交成功。\n\n謝謝。"
+"[english]BugReporter_SubmissionSuccess"	"Submission Successful.\n\nThank You."
+"BugReporter_SubmissionFailure"	"提交失敗。\n\n問題追蹤系統可能忙碌中，請再提交一次。\n\n錯誤：%1\n"
+"[english]BugReporter_SubmissionFailure"	"Submission Failure.\n\nThe Bug Collector may be busy. Please try submitting again.\n\nError: %1\n"
+"BugReporter_PreviewReportTitle"	"回報問題 - 預覽回報內容"
+"[english]BugReporter_PreviewReportTitle"	"Report A Bug - Preview Report"
 "BugReporter_ProgressSubmitting"	"提交中…"
 "[english]BugReporter_ProgressSubmitting"	"Submitting..."
+"BugReporter_SubmissionTimeout"	"提交逾時。\n\n上傳時間比預期要長，請稍後再試。\n"
+"[english]BugReporter_SubmissionTimeout"	"Submission Timeout.\n\nThe network upload is taking longer than expected. Please try again later.\n"
 "BugReporter_ProgressSubmittingPercent"	"提交中…%1%"
 "[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
+"Settings_HomeAppCheck"	"SteamVR 家測試版"
+"[english]Settings_HomeAppCheck"	"SteamVR Home Beta"
+"Settings_HomeAppDesc"	"新的 SteamVR Home 支援多種居家空間、社交功能等等。立即加入測試並於討論區發表意見回饋。"
+"[english]Settings_HomeAppDesc"	"The new SteamVR Home experience supports richer home spaces, social features, and more. This feature is currently in Beta, please provide feedback on the forums."
+"Settings_NightModeCheck"	"夜間模式"
+"[english]Settings_NightModeCheck"	"Night Mode"
+"Settings_NightModeDesc"	"夜間模式會讓頭戴顯示器的光線變暗至 5:00 AM（或直到重啟 SteamVR）。"
+"[english]Settings_NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
 }
 }
