--- a/content/panorama/localization/tenfoot_brazilian.txt
+++ b/content/panorama/localization/tenfoot_brazilian.txt
@@ -632,4 +632,16 @@
 "[english]QuitApp"	"QUIT APP"
 "Customization_Disclaimer"	"Caso os ambientes SteamVR aprimorados estejam ativados, use o menu dentro do aplicativo para personalizar o seu espaço inicial."
 "[english]Customization_Disclaimer"	"If Enhanced SteamVR Environments is enabled, use the in-app menu to customize your home space."
+"VRSettingsKnucklesTitle"	"Knuckles"
+"[english]VRSettingsKnucklesTitle"	"Knuckles"
+"VRSettingsKnuckles_CapsenseMode"	"Rastreamento de dedos da mão"
+"[english]VRSettingsKnuckles_CapsenseMode"	"Cap Sense Mode"
+"KnucklesCapsenseMode_0"	"Ativado"
+"[english]KnucklesCapsenseMode_0"	"Finger Tracking (Default)"
+"KnucklesCapsenseMode_1"	"Desativado"
+"[english]KnucklesCapsenseMode_1"	"Finger Tracking Disabled"
+"KnucklesCapsenseMode_2"	"Dedo controla gatilho"
+"[english]KnucklesCapsenseMode_2"	"Cap Sense controls Trigger"
+"KnucklesCapsenseMode_3"	"Dedo controla botão lateral"
+"[english]KnucklesCapsenseMode_3"	"Cap Sense controls Grip"
 }
