--- a/content/panorama/localization/tenfoot_french.txt
+++ b/content/panorama/localization/tenfoot_french.txt
@@ -632,4 +632,16 @@
 "[english]QuitApp"	"QUIT APP"
 "Customization_Disclaimer"	"Si les environnements SteamVR améliorés sont activés, utilisez le menu dans l'application afin de personnaliser votre espace VR."
 "[english]Customization_Disclaimer"	"If Enhanced SteamVR Environments is enabled, use the in-app menu to customize your home space."
+"VRSettingsKnucklesTitle"	"Knuckles"
+"[english]VRSettingsKnucklesTitle"	"Knuckles"
+"VRSettingsKnuckles_CapsenseMode"	"Mode de détection capacitif"
+"[english]VRSettingsKnuckles_CapsenseMode"	"Cap Sense Mode"
+"KnucklesCapsenseMode_0"	"Suivi du mouvement des doigts (Par défaut)"
+"[english]KnucklesCapsenseMode_0"	"Finger Tracking (Default)"
+"KnucklesCapsenseMode_1"	"Suivi du mouvement des doigts désactivé"
+"[english]KnucklesCapsenseMode_1"	"Finger Tracking Disabled"
+"KnucklesCapsenseMode_2"	"Gâchette (Mode de détection capacitif)"
+"[english]KnucklesCapsenseMode_2"	"Cap Sense controls Trigger"
+"KnucklesCapsenseMode_3"	"Poignée (Mode de détection capacitif)"
+"[english]KnucklesCapsenseMode_3"	"Cap Sense controls Grip"
 }
