--- a/content/panorama/localization/tenfoot_hungarian.txt
+++ b/content/panorama/localization/tenfoot_hungarian.txt
@@ -633,4 +633,16 @@
 "[english]QuitApp"	"QUIT APP"
 "Customization_Disclaimer"	"Ha be van kapcsolva a Fejlesztett SteamVR környezetek lehetőség, használd az alkalmazáson belüli menüt a kezdőtered testreszabásához."
 "[english]Customization_Disclaimer"	"If Enhanced SteamVR Environments is enabled, use the in-app menu to customize your home space."
+"VRSettingsKnucklesTitle"	"Knuckles"
+"[english]VRSettingsKnucklesTitle"	"Knuckles"
+"VRSettingsKnuckles_CapsenseMode"	"Kapacitív érzékelési mód"
+"[english]VRSettingsKnuckles_CapsenseMode"	"Cap Sense Mode"
+"KnucklesCapsenseMode_0"	"Ujjkövetés (alap)"
+"[english]KnucklesCapsenseMode_0"	"Finger Tracking (Default)"
+"KnucklesCapsenseMode_1"	"Ujjkövetés kikapcsolva"
+"[english]KnucklesCapsenseMode_1"	"Finger Tracking Disabled"
+"KnucklesCapsenseMode_2"	"A kapacitív érzékelés a ravaszt irányítja"
+"[english]KnucklesCapsenseMode_2"	"Cap Sense controls Trigger"
+"KnucklesCapsenseMode_3"	"A kapacitív érzékelés a markolatot irányítja"
+"[english]KnucklesCapsenseMode_3"	"Cap Sense controls Grip"
 }
