--- a/content/vrmonitor/translations/vrmonitor_errors_koreana.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_koreana.txt
@@ -1,4 +1,4 @@
-﻿"lang"
+"lang"
 {
 "Language"	"korean"
 "Tokens"
@@ -831,5 +831,17 @@
 "[english]VRInitError_Compositor_FirmwareRequiresUpdate_Description"	"Your headset is detected, but requires a mandatory firmware update to ensure correct operation."
 "VRInitError_Compositor_FirmwareRequiresUpdate_Action"	"펌웨어 업데이트하기"
 "[english]VRInitError_Compositor_FirmwareRequiresUpdate_Action"	"Update Firmware"
+"Lighthouse_BasestationInternalFault_06_Header"	"베이스 스테이션 사용 불가"
+"[english]Lighthouse_BasestationInternalFault_06_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_06_Description"	"베이스 스테이션에 내부 오류가 발생했습니다(오류 06). 빨간색 표시등이 깜박이는 베이스 스테이션의 전원을 껐다가 다시 켜세요. 문제가 지속되면 제조업체에 문의해 주세요."
+"[english]Lighthouse_BasestationInternalFault_06_Description"	"A base station has developed an internal problem (fault 06). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
+"Lighthouse_BasestationInternalFault_06_Action"	"htcvive.com/support 방문"
+"[english]Lighthouse_BasestationInternalFault_06_Action"	"Visit htcvive.com/support"
+"Lighthouse_BasestationInternalFault_07_Header"	"베이스 스테이션 사용 불가"
+"[english]Lighthouse_BasestationInternalFault_07_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_07_Description"	"베이스 스테이션에 내부 오류가 발생했습니다(오류 07). 빨간색 표시등이 깜박이는 베이스 스테이션의 전원을 껐다가 다시 켜세요. 문제가 지속되면 제조업체에 문의해 주세요."
+"[english]Lighthouse_BasestationInternalFault_07_Description"	"A base station has developed an internal problem (fault 07). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
+"Lighthouse_BasestationInternalFault_07_Action"	"htcvive.com/support 방문"
+"[english]Lighthouse_BasestationInternalFault_07_Action"	"Visit htcvive.com/support"
 }
 }
