--- a/content/vrmonitor/translations/vrmonitor_errors_spanish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_spanish.txt
@@ -473,7 +473,7 @@
 "[english]Popover_Off_HMD_Description"	"Make sure it is powered and connected properly."
 "Popover_Off_HMD_Action"	"Solución de problemas"
 "[english]Popover_Off_HMD_Action"	"Troubleshooting"
-"Popover_Off_Controller_Header"	"Controlador no conectado"
+"Popover_Off_Controller_Header"	"Mando no conectado"
 "[english]Popover_Off_Controller_Header"	"Controller not connected"
 "Popover_Off_Controller_Description"	"Asegúrate de que esté encendido y cerca."
 "[english]Popover_Off_Controller_Description"	"Make sure it is powered on and nearby."
@@ -835,5 +835,25 @@
 "[english]Popover_LowBattery_HMD_Header"	"HMD ready with low battery"
 "Popover_LowBattery_HMD_Description"	"Este visor está conectado y en seguimiento, pero tiene poca batería."
 "[english]Popover_LowBattery_HMD_Description"	"This HMD is connected and tracking but the battery is low."
+"VRInitError_Compositor_UnableToCreateDevice_Header"	"El compositor no ha podido crear el dispositivo"
+"[english]VRInitError_Compositor_UnableToCreateDevice_Header"	"Compositor Unable to Create Device"
+"VRInitError_Compositor_UnableToCreateDevice_Description"	"El compositor no pudo crear un dispositivo gráfico como parte de su inicialización."
+"[english]VRInitError_Compositor_UnableToCreateDevice_Description"	"The compositor was unable to create a graphics device as part of its initialization."
+"VRInitError_Compositor_UnableToCreateDevice_Action"	"Solución de problemas"
+"[english]VRInitError_Compositor_UnableToCreateDevice_Action"	"Troubleshooting"
+"Lighthouse_BasestationInternalFault_06_Header"	"Estación base inservible"
+"[english]Lighthouse_BasestationInternalFault_06_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_06_Description"	"Una estación base ha desarrollado un problema interno (error 06). Apaga y enciende la estación base que muestra una luz roja intermitente. Si el problema persiste, ponte en contacto con el fabricante para obtener ayuda."
+"[english]Lighthouse_BasestationInternalFault_06_Description"	"A base station has developed an internal problem (fault 06). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
+"Lighthouse_BasestationInternalFault_06_Action"	"Visitar htcvive.com/support"
+"[english]Lighthouse_BasestationInternalFault_06_Action"	"Visit htcvive.com/support"
+"Lighthouse_BasestationInternalFault_07_Header"	"Estación base inservible"
+"[english]Lighthouse_BasestationInternalFault_07_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_07_Description"	"Una estación base ha desarrollado un problema interno (error 07). Apaga y enciende la estación base que muestra una luz roja intermitente. Si el problema persiste, ponte en contacto con el fabricante para obtener ayuda."
+"[english]Lighthouse_BasestationInternalFault_07_Description"	"A base station has developed an internal problem (fault 07). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
+"Lighthouse_BasestationInternalFault_07_Action"	"Visitar htcvive.com/support"
+"[english]Lighthouse_BasestationInternalFault_07_Action"	"Visit htcvive.com/support"
+"Warning_DismissableWarning_NewDriverInstalled_Header"	"Nuevo controlador instalado"
+"[english]Warning_DismissableWarning_NewDriverInstalled_Header"	"New Driver Installed"
 }
 }
