--- a/content/vrmonitor/translations/vrmonitor_errors_turkish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_turkish.txt
@@ -843,5 +843,29 @@
 "[english]VRInitError_Compositor_UnableToCreateDevice_Description"	"The compositor was unable to create a graphics device as part of its initialization."
 "VRInitError_Compositor_UnableToCreateDevice_Action"	"Arıza Giderme"
 "[english]VRInitError_Compositor_UnableToCreateDevice_Action"	"Troubleshooting"
+"Lighthouse_BasestationInternalFault_06_Header"	"Ana üs kullanım dışı"
+"[english]Lighthouse_BasestationInternalFault_06_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_06_Description"	"Bir ana üste dâhili bir hata meydana geldi (hata 06). Lütfen yanıp sönen kırmızı ışığa sahip olan ana üssü güç dönüşümüne sokun. Eğer durum devam ederse lütfen yardım için üreticiye başvurun."
+"[english]Lighthouse_BasestationInternalFault_06_Description"	"A base station has developed an internal problem (fault 06). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
+"Lighthouse_BasestationInternalFault_06_Action"	"htcvive.com/support sayfasını ziyaret edin"
+"[english]Lighthouse_BasestationInternalFault_06_Action"	"Visit htcvive.com/support"
+"Lighthouse_BasestationInternalFault_07_Header"	"Ana üs kullanım dışı"
+"[english]Lighthouse_BasestationInternalFault_07_Header"	"Base station unusable"
+"Lighthouse_BasestationInternalFault_07_Description"	"Bir ana üste dâhili bir hata meydana geldi (hata 07). Lütfen yanıp sönen kırmızı ışığa sahip olan ana üssü güç dönüşümüne sokun. Eğer durum devam ederse lütfen yardım için üreticiye başvurun."
+"[english]Lighthouse_BasestationInternalFault_07_Description"	"A base station has developed an internal problem (fault 07). Please power cycle the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
+"Lighthouse_BasestationInternalFault_07_Action"	"htcvive.com/support adresini ziyaret edin"
+"[english]Lighthouse_BasestationInternalFault_07_Action"	"Visit htcvive.com/support"
+"Warning_DismissableWarning_NeedKnucklesDriver_Header"	"Knuckles Sürücüsü Mevcut"
+"[english]Warning_DismissableWarning_NeedKnucklesDriver_Header"	"Knuckles Driver Available"
+"Warning_DismissableWarning_NeedKnucklesDriver_Description"	"Knuckles kontrolcüsü kullanıyorsunuz fakat Knuckles sürücüsü yüklü değil."
+"[english]Warning_DismissableWarning_NeedKnucklesDriver_Description"	"You are using Knuckes controllers, but don't have the Knuckles driver installed."
+"Warning_DismissableWarning_NeedKnucklesDriver_Action"	"Sürücüyü Yükleyin"
+"[english]Warning_DismissableWarning_NeedKnucklesDriver_Action"	"Install Driver"
+"Warning_DismissableWarning_NewDriverInstalled_Header"	"Yeni Sürücü Yüklendi"
+"[english]Warning_DismissableWarning_NewDriverInstalled_Header"	"New Driver Installed"
+"Warning_DismissableWarning_NewDriverInstalled_Description"	"Yeni sürücüyü kullanabilmek için SteamVR'ı yeniden başlatmanız gerekmektedir."
+"[english]Warning_DismissableWarning_NewDriverInstalled_Description"	"To use your new driver you will need to restart SteamVR."
+"Warning_DismissableWarning_NewDriverInstalled_Action"	"Yeniden Başlat"
+"[english]Warning_DismissableWarning_NewDriverInstalled_Action"	"Restart"
 }
 }
